内容优化 -为日本增加了冷战分数的扣除或添加 -修正了部分文案 -重新实现了结束界面动态本地化以避免覆盖原版文件

--- a/localisation/simp_chinese/replace/LFB_replace_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/LFB_replace_l_simp_chinese.yml
@@ -11,3 +11,7 @@
  WAR_NAME_JAP_YUN: "第二次抗日战争-华南战线"
  WAR_NAME_YUN_JAP: "第二次抗日战争-华南战线"
 
+ ##结束界面tt
+ TNO_CountryClosing_select_btn_credits_tt: "[Get_TNO_CountryClosing_select_btn_credits_tt]"
+ TNO_CountryClosing_left_title: "[GET_TNO_CountryClosing_left_title]"
+
