--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -288,6 +288,8 @@
   TNO_CountryClosing_epilogue_COX:0"至此，新疆苏维埃政府的故事便暂告一段落。农业与工业的体系已经基本完善，军阀和流寇的影响也已清扫干净。农民和工人无比拥护这支自贝加尔湖归来的红军，红日再一次照耀在这片大地上。地方宗教势力和别派人士也暂时被收拢在了抗日民族统一战线之中。于情于理，这些都是好事。但，内部问题解决了，外部却仍风云变幻：西方，哈萨克斯坦统一战争正摩拳擦掌；北方，俄罗斯大地上第一批有希望统一的军阀正勾心斗角，他们对我们的态度尚不可知；东北，蒙疆伪政府的领导者亲王也岌岌可危；南方，高山之国依然与世隔绝。他们是敌人，还是可以团结的朋友？犹未可知。而在极东，旭日帝国已经注意到这颗闪烁的红星。它会心血来潮，吹灭这粒火星；抑或视而不见，直至“共荣圈”被人民战争的烈火焚烧殆尽？敬请等待下个版本更新吧。"
   TNO_CountryClosing_epilogue_COX:1"新疆革命胜利、土地改革成功、根据地建设热火朝天…事情的顺利远远超出了毛岸英的想象。革命看起来一帆风顺，全中国的革命蓝图似乎也清晰了——果真如此么？\n\n未必。边区仍困于无边黄沙，马匪们日夜不休侵扰边境……更遑论在边区东方，还有一支旭日帝国的精锐在等着红军指战员们。\n\n来自贝加尔湖的光要照耀这片久经创伤的土地，仍然任重而道远。对现在的中国而言，中国旅为西北带来的这缕星光虽然微弱，但弥足珍贵。要掀翻这可笑的新秩序，共产党就必须向大地深处扎根，直到能够掀翻这片土地将所有寄生虫压在脚下，直到那颗在地平线上若隐若现的红星能真正照耀中国。""
   
+  TNO_CountryClosing_left_title_vanilla: "自此，\n新秩序迎来了一缕暮色…"
+
   TNO_CountryClosing_left_title_XBJ_early_ending:"黄巾弥勒何时至\n掀起惊涛改旧红"
   TNO_CountryClosing_epilogue_XBJ_early_ending:"旷野之上，刘少奇正沉思着。而在他面前的，赫然是部队打扫完战场之后，堆起来的红军士兵尸体。\n向远方眺望，兰州城楼上，鲜红的旭日旗依旧飘扬。与预期的一鼓作气解放兰州不同，主攻兰州的部队被铺天盖地的炮火与炸弹淹没，再无法前进一步。红军与日军之间的差距，远不是抗日救国的决心能弥补的。面前的兰州犹如天堑，不知如何是好。\n而在西南，龙云发起了声势浩大的护国运动，誓要将中国从旭日的镣铐下解放，东亚维持了20年的表面和平终被打破。可西南的战局仍不明朗…仅凭云贵两省，真的可以敌的过装备精良训练有素的伪民国军队吗？\n\n不过，对于坐镇乌鲁木齐的毛岸英来说，属于他的万里长征才刚刚开始……"
   
@@ -300,6 +302,10 @@
   TNO_CountryClosing_left_title_COX_IF_civ_war_ending:"拜罢黄垆闻笑语\n英雄人物看今朝"
   TNO_CountryClosing_epilogue_COX_IF_civ_war_ending:"在长达百年的蹂躏与紧接着的内战后，中国终于得以拥抱最终的和平与自由。由于对中国未来的描绘截然不同，国共和谈最终以破裂告终，大江南北，长城内外，再次被华夏男儿们的鲜血染红……好在，这一切最终得以尘埃落定，血腥的厮杀后，中国共产党成为了最后的赢家。\n 中国受奴役的历史结束了，但中国在废墟中崛起的历史才刚刚开始，在天安门城楼上，毛岸英庄严宣告了中华人民共和国的成立。但在劫后余生欢欣鼓舞的人民脚下，是三十年间饱受日本帝国主义剥削蹂躏，又被绵延不绝的战火摧残的土地。随着中国再度归属于一个大一统的政权，属于这个古老国家的新篇章正在徐徐开启……虽然前路漫长，荆棘密布，但党和人民终将攻坚克难，为迈向社会主义，乃至共产主义，不懈奋斗。\n\n70年代的曙光已经浮现，百折不挠的中国人民重新起身，揩干身上的血污，大踏步奔向自己的未来……"
   
+  TNO_CountryClosing_select_btn_credits_tt_vanilla: "§W《新秩序》的开发团队诚挚地感谢各位游玩本模组，希望你玩得开心！§!"
+  TNO_CountryClosing_select_btn_credits_tt_LFB: "§V《光自贝加尔湖来》§!§W的开发团队诚挚地感谢各位游玩本模组，希望您玩得开心！§!"
+
+
   JAP_puppet_no_war:"离心离德的共荣圈"
   JAP_puppet_no_war_desc:"我们一直大力鼓吹共荣圈内部的团结协作，可当危机真正来临，我们的盟友和傀儡们却并未积极地维护“东亚共荣”。要么是被内部的冲突折磨得焦头烂额，要么是出于自身利益冷眼旁观，他们在这关键时刻并不愿为日本人而在东亚战场上流血。\n\n§R中国问题只能由我们独自解决了。§！"
   JAP_sphere_no_war:"离心离德的共荣圈"
@@ -330,7 +336,7 @@
   WAR_NAME_YUN_COX: "第二次国共内战"
   
   ##国家选择界面
-  COX_Bookmark_DESC: "从冰天雪地的阿尔汉格尔斯克一路向东，以“西俄罗斯革命阵线外交使团”为名号的近卫步兵第八十八旅，跟随着旅长毛岸英一路辗转来到了贝加尔湖畔——最高主席团的势力范围。主席团的最高领导人亚戈达对这个年轻的中国旅长并无兴趣，但他觉察到，八十八旅的到来是宣称主席团为“苏联正统”的大好时机。于是，他不仅热情地接见了毛岸英，还为这支远道而来的部队恢复了荣誉番号，并进行了补员。这些被亚戈达补充进入八十八旅的战士大多是非俄罗斯人，其中有大量寻求庇护的原东北抗联部队和八路军残部，此外也不乏蒙古、哈萨克乃至布里亚特战士的身影。\n\n毛岸英深知他只不过是亚戈达整肃部队的棋子，因而只是默默地治理着这支来源复杂的连队，在NKVD的紧密监视下，等待着时机的再一次到来。对暴政的怒火在他心中一天天地积压，终有一天会喷薄而出——只是那时的他还不会想到，会有一个比他更年轻、更勇敢的人，抢先发出荡涤阴霾的呐喊。\n\n萨布林和他的部队已经发动了兵变；八十八旅将加入他打倒伊尔库茨克暴政的斗争。若最终能获得胜利，他们便会踏上归乡之路。"
+  COX_Bookmark_DESC: "从冰天雪地的阿尔汉格尔斯克一路向东，以“西俄罗斯革命阵线外交使团”为名号的近卫步兵第八十八旅，跟随着旅长毛岸英一路辗转来到了贝加尔湖畔——最高主席团的势力范围中。虽对这些风尘仆仆的战士们本身并无兴趣，但最高主席团首脑亚戈达敏锐地觉察到，八十八旅的到来正是巩固主席团“正统性”的良机。他不仅许诺当俄罗斯情况稳定之时，支援他们还乡，还为这支远道而来的部队恢复了荣誉番号，并进行了补员。大量走投无路北上的原东北抗联部队，流离失所的中国党员与战士，还有数量不少的蒙古、哈萨克乃至布里亚特原住民战士被亚戈达一并塞到了八十八旅之中。\n \n作为主席团权威的象征，八十八旅频繁地出现在阅兵，巡逻与镇压“内部敌人”的运动中，却在远东人民真正需要他们之时被调离对抗法西斯的战场。毛岸英深知他们都已经成了亚戈达掌中的锡兵，任其摆布，毫无选择的自由。因而无论是虚假的赞誉或是羞辱，他都一概接受，在NKVD的紧密监视下，毛岸英一度几乎要接受了自己的命运……但久违的重聚却令这些离散异乡的战士们共同发出了灵魂深处的希冀——回家！二十年来，故乡被侵略者残酷地蹂躏，人民被屠戮，奴役，但他们不愿再等下去了，他们要回去，去到白山黑水，黄土高坡；他们宁愿死于返乡的征途，也不愿溺死在这死气沉沉的远东。\n\n于是，当贝加尔湖右岸的一个青年发出反抗暴政的先声后，八十八旅迅速揭竿而起。汇聚在反抗暴政的红旗之下，战士们气势如虹；倘若将那暴君擒下，就要踏上那漫漫还乡路……"
   #开局界面
   CountryInfo_Development_Content.11: "关注LFB最新动态"
   CountryInfo_Development_Content_desc.11: "您可以通过§Y以下§!渠道了解本§W子模组§!的相关信息\n\n也欢迎加入QQ群：§W262293916§!进行讨论\n\n请务必随时查看我们的最新动态！"
