BUG修正 -修正了蒙古内战开始时乌兰巴托改名的问题

--- a/localisation/simp_chinese/LFB_if_events_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_if_events_l_simp_chinese.yml
@@ -39,7 +39,7 @@
  LFB_COX_IF_foc.21.t:"古国新生，其一"
  LFB_COX_IF_foc.21.desc:"远方的黄沙遮蔽了天空，山麓被灰雾遮挡。直到太阳从云层中现形，将空气中的朦胧一扫而光。小张出神地望着远方，面前有不少的乡亲们还在陆陆续续来到今天的动员会场地。\n\n突然一声稚嫩的声音响起，小张四下张望，却看不到声音发出的源头。低头一看，正好与两只圆滚滚的大眼睛四目相对。小张啼笑皆非地说：“娃子，你爸妈呢？”小娃娃没回答他，只是将手中紧握的笔记本放在台上。小张将笔记本拿起来，本子的封面已经有点微微泛黄，印刷的字迹也有些模糊，但依稀还能辨认出封面上手写的名字：黄树生。小张看了一眼娃子，见他并没有阻止查看，便翻开了第一页。“在红军出现之前的几十年里，这片土地一直在默默地注视着这里。但今天它终于愤怒了。这片土地上的人民终于愤怒了。\n\n他们红着眼，流着泪，告别妻儿，来到一个他们从来没有去过，以后也没有机会再去的地方，这个地方离家很远很远，离死亡很近很近。因为这里是——前线。”\n\n再后面的字迹已经不可辨认，但小张已然猜到，这个笔记本的主人就是这个娃子的父亲，在写下这些话后便毅然去往了前线，从此一去不回。\n\n小张不忍心告诉娃子可能的结果，只是问：“你是要去找爸爸吗？”娃子点点头。小张看出孩子怕生，只是不停的在说要去找爸爸，遍走到他面前，蹲下来，温柔地对他说：“娃子，你的爸爸是英雄，他在我们看不见的地方守护着我们。你和你一样大的娃娃们能快乐成长，就是你的爸爸和叔叔我们期望的。好好长大，要看到革命胜利的一天，到那个时候，爸爸就会回来了。”小张说完，站起身来，从那个孩子的眼睛中，若有若无地看见了点什么。\n\n报名结束后，等到太阳落下一点，小张站起身，走向演讲台，手里拿着涂涂改改过的演讲稿，台下掌声雷动，使小张更觉得振奋起来。"
  LFB_COX_IF_foc.21.a:"“士不可以不弘毅，任重而道远。”"
- LFB_COX_IF_foc.22.t:"古国新生，其一"
+ LFB_COX_IF_foc.22.t:"古国新生，其二"
  LFB_COX_IF_foc.22.desc:"小张走上用木板临时搭成的演讲台，立到话筒前，嘶哑的端鸣声让乡亲们渐渐停止了讨论，将目光全然地汇聚到他的身上。\n\n小张扫视着台下的观众，他的动员对象。他看到了一张张灰白或蜡黄的面孔，一双双浑浊或清澈的眼睛，但无一例外都充满了渴望，渴望着他的一番话能给他们带来一条无悔的道路。他动了动喉咙，“乡亲们！”会场十分安静，就像是暴风雨前的死寂一般。\n\n“大家都听说了，我们共产党，和南边的龙云龙大帅，已经带着部队和日本人开战了。很多人都说，这是送死，这是拿着鸡蛋碰石头，但我说，是的!我们还要用我们这颗鸡蛋，把日本人的石头砸烂!小张咽了口唾沫，看向远处的政委，接着说： “在这里的乡亲们，很多并不是生在这里的人，我和你们一样!我的父亲在华北被日本人杀了，我一个人在黄土上，遭了地主的剥削、受了土匪的棍棒，流浪了多久，好不容易才找到红军，加入了他们的队伍，为我爸爸，也为我同村的乡亲们报仇!我们农民，自古以来就是面朝黄土背朝天，喝着黄河水，靠着土地过一辈子，而现在日本人来了，他们抢走了我们的土地，烧败了我们的庄稼，杀害了我们的同胞，这份仇，我们一定要报！”小张的声音哽咽了，泪水模糊了视线，他想起了他的家人，他的村庄，全部在在一场火焰中消失在记忆里，他爱的一切都在日本人的侵略中毁灭一声呐喊将他惊醒，\n\n “我们要报仇!”小张惊愕的抬起头来，才发现是台下几个群众带着大家喊了起来。“打到中原去!打跑日本人!”“保卫土地!为同胞报仇!”此起彼伏的呐喊声让小张，让在场的所有人内心充满了悸动。\n\n是啊!在这片古老的、千百年荒凉的土地上，正是这样显扬的精神让中华民族生了根，发了芽，遍布了这片家园。而日本人想要把它夺走，那就让他们尝尝沉睡着的，来自古国的愤怒呐喊!即使这份精神已经被压抑了数十年。但直至今日，它会随着根和茎破土而出，代表着觉醒的中国，挽救这片土地所有的不甘与绝望。"
  LFB_COX_IF_foc.22.a:"“士不可以不弘毅，任重而道远。”"
  LFB_COX_IF_foc.23.t:"汉奸公审大会（其一）"
