BUG修复/内容优化 -修复了第二次国共内战中击败TIB后闪退的问题 -为西北苏区增加了第二次抗日战争期间的阵营

--- a/localisation/simp_chinese/LFB_peace_popup_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_peace_popup_l_simp_chinese.yml
@@ -5,12 +5,12 @@
  TNO_PEACE_POPUP_WAR_LFB_GAW_GAN: "[GAN.GetFlag]§e疯狗§!已死，通往中国腹地的大门已经敞开，§Y战争的烈火将再临于此。§!"
  TNO_PEACE_POPUP_WAR_LFB_GAW_CHI: "昔日作威作福的[CHI.GetFlag]§j汉奸§!已被中国人民踩在脚下，中华民族的§x解放§!§z事业§!更进一步。"
  TNO_PEACE_POPUP_WAR_LFB_GAW_GNG: "§e帝国主义§!用中国人民的血肉塑造的[GNG.GetFlag]§r畸形怪物§!已被中国人民的铁拳砸得粉碎，中华民族的§x解放§!§z事业§!更进一步。"
- TNO_PEACE_POPUP_WAR_LFB_GAW_MAN: "自命高贵的[MAN.GetFlag]§O傀儡§!从人民的尸骨所砌成的王座上跌落，中华民族的§x解放§!§z事业§!更进一步。"
+ TNO_PEACE_POPUP_WAR_LFB_GAW_MAN: "自命高贵的[MAN.GetFlag]§O傀儡§!从人民尸骨所砌成的王座上跌落，中华民族的§x解放§!§z事业§!更进一步。"
  TNO_PEACE_POPUP_WAR_LFB_GAW_JAP: "[JAP.GetFlag]§e旭日§!东落，§x中华§!§z民族§!的§e百年国耻§!终得洗雪。"
  TNO_PEACE_POPUP_WAR_LFB_GAW_HNA: "又一颗孤悬海外的[HNA.GetFlag]§e明珠§!重回了§x中§!§z国§!的怀抱，中华民族的§x解放§!§z事业§!更进一步。"
  TNO_PEACE_POPUP_WAR_LFB_GAW_COX: "[JAP.GetFlag]§e旭日§!的光辉再一次让[COX.GetFlag]§x红星§!黯然失色，§x中华§!§z民族§!寻求自由的梦想终究还是破灭了。"
  TNO_PEACE_POPUP_WAR_LFB_GAW_YUN: "[JAP.GetFlag]§e旭日§!的光辉再一次让[YUN.GetFlag]§r血日§!黯然失色，§x中华§!§z民族§!寻求自由的梦想终究还是破灭了。"
- TNO_PEACE_POPUP_WAR_LFB_IF_TIB: "新生的[COX.GetFlag]§x红日§!融化了千年的[TIB.GetFlag]§d冰雪§!，白雪之下的茵茵绿草终于迎来了光明。"
+ TNO_PEACE_POPUP_WAR_LFB_IF_TIB: "新生的[COX.GetFlag]§x红日§!融化了千年的[TIB.GetFlag]§d冰川§!，白雪之下的茵茵绿草终于迎来了光明。"
  TNO_PEACE_POPUP_WAR_LFB_2CCW_COX: "在决定§z新中国§!命运的理念之争中，[YUN.GetFlag]§z白日§!碾碎了[COX.GetFlag]§x镰锤§!。"
  TNO_PEACE_POPUP_WAR_LFB_2CCW_YUN: "在决定§x新中国§!命运的理念之争中，[COX.GetFlag]§x镰锤§!击碎了[YUN.GetFlag]§z白日§!。"
 ###配文###
