--- a/localisation/simp_chinese/replace/LFB_replace_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/LFB_replace_l_simp_chinese.yml
@@ -15,3 +15,6 @@
  TNO_CountryClosing_select_btn_credits_tt: "[Get_TNO_CountryClosing_select_btn_credits_tt]"
  TNO_CountryClosing_left_title: "[GET_TNO_CountryClosing_left_title]"
 
+ NLF_Leader: "[Get_NLF_Leader_name]"
+ NLF_Leader_desc: "[Get_NLF_Leader_desc]"
+
