--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -346,3 +346,11 @@
   CountryInfo_Development_Content.13: "（占位）"
   CountryInfo_Development_Content_desc.13: "这装不下这么多人！"
   CountryInfo_Development_Content_desc.14: "《新秩序：欧洲末日》，其中文汉化包及其子模组“光自贝加尔湖来”（以下简称“本模组”）可能包含受版权保护的素材。\n\n本模组如有对受版权保护的素材的使用，均是以揭露法西斯主义、纳粹主义等极端主义思想的危害性为目的。本模组至今从未，未来也不会试图利用受版权保护的素材营利。因此，本模组认为其对这些素材的使用符合《中华人民共和国著作权法》第24条第2款所规定的“适当引用”、《美利坚合众国法典》第17卷第107条所规定的“合理使用”以及其他司法管辖区相应法律标准的情形。\n\n若您希望将受版权保护的素材用于“合理使用”（或您所处的司法管辖区的相应法律标准）之外的目的，则应当取得相应素材的版权所有者的许可，否则可能构成侵权。"
+
+  LFB_CHI_THE_NATIONAL_LIBERATION_FRONT_SOUTH: "民族解放阵线"
+  LFB_CHI_THE_NATIONAL_LIBERATION_FRONT_NORTH: "民族解放阵线-西北战线"
+
+  Get_NLF_Leader_name_COX: "第三次统一战线-西北苏区"
+  Get_NLF_Leader_name_default: "第三次统一战线领袖"
+  Get_NLF_Leader_desc_COX: "第二次统一阵线战败后，中国被日本肆意践踏，国破家亡。\n\n此情此景，绝不容再次发生。\n\n在人称“云南王”的龙云归来后，西北苏区的革命者们也从西北的大漠中挥师东进，加入第三次统一阵线，为反抗日帝国主义对人民的压迫而做出拼死一搏。有些被时代淘汰的人将这种行为视为飞蛾扑火，是赌上中国共产主义未来的豪赌。但中国的儿女，心中那希望的星星之火，可以燎原，无论是谁，都无法扑灭。当解放的那一天来临，众人进军汇聚的那蓬勃希望，即使是旭日的帝国也将因此陨落。"
+  Get_NLF_Leader_desc_default: "第二次统一阵线战败后，中国被日本肆意践踏，国破家亡。\n\n此情此景，绝不容再次发生。\n\n人称“云南王”的龙云已归来，散落在东南亚各地的第二次统一阵线残部已联合起来，从云南到东北，各地抗日势力已联合起来，组成第三次统一阵线，反抗日帝国主义对人民的压迫。有些被时代淘汰的人将这种行为斥为无用功，只不过是空流血一场。但中国的儿女，心中那希望的星星之火，可以燎原，无论是谁，都无法扑灭。当解放的那一天来临，众人进军汇聚的那蓬勃希望，即使是旭日的帝国也将因此陨落。"
