--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -336,7 +336,7 @@
   WAR_NAME_YUN_COX: "第二次国共内战"
   
   ##国家选择界面
-  COX_Bookmark_DESC: "从冰天雪地的阿尔汉格尔斯克一路向东，以“西俄罗斯革命阵线外交使团”为名号的近卫步兵第八十八旅，跟随着旅长毛岸英一路辗转来到了贝加尔湖畔——最高主席团的势力范围中。虽对这些风尘仆仆的战士们本身并无兴趣，但最高主席团首脑亚戈达敏锐地觉察到，八十八旅的到来正是巩固主席团“正统性”的良机。他不仅许诺当俄罗斯情况稳定之时，支援他们还乡，还为这支远道而来的部队恢复了荣誉番号，并进行了补员。大量走投无路北上的原东北抗联部队，流离失所的中国党员与战士，还有数量不少的蒙古、哈萨克乃至布里亚特原住民战士被亚戈达一并塞到了八十八旅之中。\n \n作为主席团权威的象征，八十八旅频繁地出现在阅兵，巡逻与镇压“内部敌人”的运动中，却在远东人民真正需要他们之时被调离对抗法西斯的战场。毛岸英深知他们都已经成了亚戈达掌中的锡兵，任其摆布，毫无选择的自由。因而无论是虚假的赞誉或是羞辱，他都一概接受，在NKVD的紧密监视下，毛岸英一度几乎要接受了自己的命运……但久违的重聚却令这些离散异乡的战士们共同发出了灵魂深处的希冀——回家！二十年来，故乡被侵略者残酷地蹂躏，人民被屠戮，奴役，但他们不愿再等下去了，他们要回去，去到白山黑水，黄土高坡；他们宁愿死于返乡的征途，也不愿溺死在这死气沉沉的远东。\n\n于是，当贝加尔湖右岸的一个青年发出反抗暴政的先声后，八十八旅迅速揭竿而起。汇聚在反抗暴政的红旗之下，战士们气势如虹；倘若将那暴君擒下，就要踏上那漫漫还乡路……"
+  COX_Bookmark_DESC: "从冰天雪地的阿尔汉格尔斯克一路向东，以“西俄罗斯革命阵线外交使团”为名号的近卫步兵第八十八旅，跟随着旅长毛岸英一路辗转来到了贝加尔湖畔——最高主席团的势力范围中。虽对这些风尘仆仆的战士们本身并无兴趣，但最高主席团首脑亚戈达敏锐地觉察到，八十八旅的到来正是巩固主席团“正统性”的良机。他不仅许诺当俄罗斯情况稳定之时，支援他们还乡，还为这支远道而来的部队恢复了荣誉番号，并进行了补员。大量走投无路北上的原东北抗联部队，流离失所的中国党员与战士，还有数量不少的蒙古、哈萨克乃至布里亚特原住民战士被亚戈达一并塞到了八十八旅之中。\n \n作为主席团权威的象征，八十八旅频繁地出现在阅兵，巡逻与镇压“内部敌人”的运动中，却在远东人民真正需要他们之时被调离对抗法西斯的战场。毛岸英深知他们都已经成了亚戈达掌中的“锡兵”：任其摆布，毫无选择的自由。因而，无论是虚假的赞誉或是羞辱，他都一概接受。在NKVD的紧密监视下，毛岸英一度几乎要接受了自己的命运……但久违的重聚却令这些离散异乡的战士们共同发出了灵魂深处的希冀——回家！二十年来，故乡被侵略者残酷地蹂躏，人民被屠戮，奴役，但他们不愿再等下去了。他们要回去，去到白山黑水，黄土高坡；他们宁愿死于返乡的征途，也不愿溺死在这死气沉沉的远东。\n\n于是，当贝加尔湖右岸的一个青年发出反抗暴政的先声后，八十八旅迅速揭竿而起。汇聚在反抗暴政的红旗之下，战士们气势如虹；倘若将那暴君擒下，就要踏上那漫漫还乡路……"
   #开局界面
   CountryInfo_Development_Content.11: "关注LFB最新动态"
   CountryInfo_Development_Content_desc.11: "您可以通过§Y以下§!渠道了解本§W子模组§!的相关信息\n\n也欢迎加入QQ群：§W262293916§!进行讨论\n\n请务必随时查看我们的最新动态！"
@@ -348,9 +348,9 @@
   CountryInfo_Development_Content_desc.14: "《新秩序：欧洲末日》，其中文汉化包及其子模组“光自贝加尔湖来”（以下简称“本模组”）可能包含受版权保护的素材。\n\n本模组如有对受版权保护的素材的使用，均是以揭露法西斯主义、纳粹主义等极端主义思想的危害性为目的。本模组至今从未，未来也不会试图利用受版权保护的素材营利。因此，本模组认为其对这些素材的使用符合《中华人民共和国著作权法》第24条第2款所规定的“适当引用”、《美利坚合众国法典》第17卷第107条所规定的“合理使用”以及其他司法管辖区相应法律标准的情形。\n\n若您希望将受版权保护的素材用于“合理使用”（或您所处的司法管辖区的相应法律标准）之外的目的，则应当取得相应素材的版权所有者的许可，否则可能构成侵权。"
 
   LFB_CHI_THE_NATIONAL_LIBERATION_FRONT_SOUTH: "民族解放阵线"
-  LFB_CHI_THE_NATIONAL_LIBERATION_FRONT_NORTH: "民族解放阵线-西北战线"
+  LFB_CHI_THE_NATIONAL_LIBERATION_FRONT_NORTH: "民族解放阵线 - 北方战线"
 
-  Get_NLF_Leader_name_COX: "第三次统一战线-西北苏区"
+  Get_NLF_Leader_name_COX: "第三次统一战线 - 西北苏区"
   Get_NLF_Leader_name_default: "第三次统一战线领袖"
-  Get_NLF_Leader_desc_COX: "第二次统一阵线战败后，中国被日本肆意践踏，国破家亡。\n\n此情此景，绝不容再次发生。\n\n在人称“云南王”的龙云归来后，西北苏区的革命者们也从西北的大漠中挥师东进，加入第三次统一阵线，为反抗日帝国主义对人民的压迫而做出拼死一搏。有些被时代淘汰的人将这种行为视为飞蛾扑火，是赌上中国共产主义未来的豪赌。但中国的儿女，心中那希望的星星之火，可以燎原，无论是谁，都无法扑灭。当解放的那一天来临，众人进军汇聚的那蓬勃希望，即使是旭日的帝国也将因此陨落。"
-  Get_NLF_Leader_desc_default: "第二次统一阵线战败后，中国被日本肆意践踏，国破家亡。\n\n此情此景，绝不容再次发生。\n\n人称“云南王”的龙云已归来，散落在东南亚各地的第二次统一阵线残部已联合起来，从云南到东北，各地抗日势力已联合起来，组成第三次统一阵线，反抗日帝国主义对人民的压迫。有些被时代淘汰的人将这种行为斥为无用功，只不过是空流血一场。但中国的儿女，心中那希望的星星之火，可以燎原，无论是谁，都无法扑灭。当解放的那一天来临，众人进军汇聚的那蓬勃希望，即使是旭日的帝国也将因此陨落。"
+  Get_NLF_Leader_desc_COX: "第二次统一战线战败后，中国被日本肆意践踏，国破家亡。\n\n此情此景，绝不容再次发生。\n\n在人称“云南王”的龙云归来后，西北苏区的革命者们也从西北的大漠中挥师东进，加入第三次统一战线，为反抗日帝国主义对人民的压迫而做出拼死一搏。有些被时代淘汰的人将这种行为视为飞蛾扑火，是赌上中国独立自由之未来的豪赌。但，在中华民族的儿女心中，那希望的星星之火，可以燎原；无论是谁，都无法扑灭。当解放的那一天来临，众人进军汇聚的那蓬勃的希望，即使是那高升的旭日帝国，也将因此陨落。"
+  Get_NLF_Leader_desc_default: "第二次统一战线战败后，中国被日本肆意践踏，国破家亡。\n\n此情此景，绝不容再次发生。\n\n人称“云南王”的龙云已归来，散落在东南亚各地的第二次统一战线残部已联合起来，从云南到东北，各地抗日势力已联合起来，组成第三次统一战线，反抗日帝国主义对人民的压迫。有些被时代淘汰的人将这种行为斥为无用功，只不过是空流血一场。但，在中华民族的儿女心中，那希望的星星之火，可以燎原；无论是谁，都无法扑灭。当解放的那一天来临，众人进军汇聚的那蓬勃的希望，即使是那高升的旭日帝国，也将因此陨落。"
