--- a/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
@@ -29,6 +29,9 @@ COX_SOV_DEF: "中华苏维埃共和国"
 COX_XBJ: "西北抗日边区"
 COX_XBJ_ADJ: "西北抗日边区"
 COX_XBJ_DEF: "西北抗日边区"
+KOR_LFB_IF: "朝鲜"
+KOR_LFB_IF_ADJ: "朝鲜"
+KOR_LFB_IF_DEF: "朝鲜"
 
 QIN_NIQ: "西北行政公署"
 QIN_NIQ_ADJ:"西北行政公署"
