--- a/localisation/simp_chinese/LFB_ideas_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_ideas_l_simp_chinese.yml
@@ -78,6 +78,10 @@ COX_Logistics_Support: "后勤保障"
 COX_Friendship_Of_Robe: "袍泽之谊"
 COX_Rise_Up: "起来，不愿做奴隶的人们！"
 unite_like_a_fortress: "众志成城"
+COX_civ_war_ruined: "满身疮痍"
+COX_civ_war_bandits: "匪患猖獗"
+COX_civ_war_bourgeoisie: "暗流涌动"
+COX_civ_war_land_reform: "全国土地改革"
 #魔怔内容及其介绍
   Touhou: "幻想世界入"
   INSANE: "你红军爷爷回来啦"
