--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -342,7 +342,7 @@
   CountryInfo_Development_Content_desc.11: "您可以通过§Y以下§!渠道了解本§W子模组§!的相关信息\n\n也欢迎加入QQ群：§W262293916§!进行讨论\n\n请务必随时查看我们的最新动态！"
   CountryInfo_Development_Folder.112: "光自贝加尔湖来-开发团队"
   CountryInfo_Development_Content.12: "鸣谢"
-  CountryInfo_Development_Content_desc.12: "（在这里放置制作人员名单）"
+  CountryInfo_Development_Content_desc.12: "duc，Fairrairtha，LeaderOne_Official，LemonLover，MKMASASYK，阿巴巴阿巴，博尔赫斯的沙之书，明天的太阳，访古砖，龚兴仁，海军上将哈尔西，梁王绚辻词，梁希隐，某科学的宇宙河豚，某转生的史莱姆，氢氦锂铍硼，史上最会打灰的人，温赫扎，哮喘桃，心酱，斫青客\n\n\n§W特别感谢§!§Y是非真假一座桥§!§W为本模组做出的贡献！§!"
   CountryInfo_Development_Content.13: "（占位）"
   CountryInfo_Development_Content_desc.13: "这装不下这么多人！"
   CountryInfo_Development_Content_desc.14: "《新秩序：欧洲末日》，其中文汉化包及其子模组“光自贝加尔湖来”（以下简称“本模组”）可能包含受版权保护的素材。\n\n本模组如有对受版权保护的素材的使用，均是以揭露法西斯主义、纳粹主义等极端主义思想的危害性为目的。本模组至今从未，未来也不会试图利用受版权保护的素材营利。因此，本模组认为其对这些素材的使用符合《中华人民共和国著作权法》第24条第2款所规定的“适当引用”、《美利坚合众国法典》第17卷第107条所规定的“合理使用”以及其他司法管辖区相应法律标准的情形。\n\n若您希望将受版权保护的素材用于“合理使用”（或您所处的司法管辖区的相应法律标准）之外的目的，则应当取得相应素材的版权所有者的许可，否则可能构成侵权。"
@@ -354,3 +354,7 @@
   Get_NLF_Leader_name_default: "第三次统一战线领袖"
   Get_NLF_Leader_desc_COX: "第二次统一战线战败后，中国被日本肆意践踏，国破家亡。\n\n此情此景，绝不容再次发生。\n\n在人称“云南王”的龙云归来后，西北苏区的革命者们也从西北的大漠中挥师东进，加入第三次统一战线，为反抗日帝国主义对人民的压迫而做出拼死一搏。有些被时代淘汰的人将这种行为视为飞蛾扑火，是赌上中国独立自由之未来的豪赌。但，在中华民族的儿女心中，那希望的星星之火，可以燎原；无论是谁，都无法扑灭。当解放的那一天来临，众人进军汇聚的那蓬勃的希望，即使是那高升的旭日帝国，也将因此陨落。"
   Get_NLF_Leader_desc_default: "第二次统一战线战败后，中国被日本肆意践踏，国破家亡。\n\n此情此景，绝不容再次发生。\n\n人称“云南王”的龙云已归来，散落在东南亚各地的第二次统一战线残部已联合起来，从云南到东北，各地抗日势力已联合起来，组成第三次统一战线，反抗日帝国主义对人民的压迫。有些被时代淘汰的人将这种行为斥为无用功，只不过是空流血一场。但，在中华民族的儿女心中，那希望的星星之火，可以燎原；无论是谁，都无法扑灭。当解放的那一天来临，众人进军汇聚的那蓬勃的希望，即使是那高升的旭日帝国，也将因此陨落。"
+
+  LFB_CountryClosing_credits_0: "§W现成员：§!\nduc，Fairrairtha，LeaderOne_Official，LemonLover，MKMASASYK，阿巴巴阿巴，博尔赫斯的沙之书，明天的太阳，访古砖，龚兴仁，海军上将哈尔西，梁王绚辻词，梁希隐，某科学的宇宙河豚，某转生的史莱姆，氢氦锂铍硼，史上最会打灰的人，温赫扎，哮喘桃，心酱，斫青客"
+  LFB_CountryClosing_credits_1: "§W前成员：§!\n§Limmortalwyy，超人，三一，Yuri1917，zzyy，罗莎§!"
+  LFB_CountryClosing_credits_2: "§W特别鸣谢：§!\n§Y是非真假一座桥§!§U，本模组的奠基人§!\n§G光自水群的群友们§!\n§K每一位支持我们走到现在的玩家朋友§!"
