内容优化 -修缮了制作人员名单

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -356,5 +356,5 @@
   Get_NLF_Leader_desc_default: "第二次统一战线战败后，中国被日本肆意践踏，国破家亡。\n\n此情此景，绝不容再次发生。\n\n人称“云南王”的龙云已归来，散落在东南亚各地的第二次统一战线残部已联合起来，从云南到东北，各地抗日势力已联合起来，组成第三次统一战线，反抗日帝国主义对人民的压迫。有些被时代淘汰的人将这种行为斥为无用功，只不过是空流血一场。但，在中华民族的儿女心中，那希望的星星之火，可以燎原；无论是谁，都无法扑灭。当解放的那一天来临，众人进军汇聚的那蓬勃的希望，即使是那高升的旭日帝国，也将因此陨落。"
 
   LFB_CountryClosing_credits_0: "§W现成员：§!\nduc，Fairrairtha，LeaderOne_Official，LemonLover，MKMASASYK，阿巴巴阿巴，博尔赫斯的沙之书，明天的太阳，访古砖，龚兴仁，海军上将哈尔西，梁王绚辻词，梁希隐，某科学的宇宙河豚，某转生的史莱姆，氢氦锂铍硼，史上最会打灰的人，温赫扎，哮喘桃，心酱，斫青客"
-  LFB_CountryClosing_credits_1: "§W前成员：§!\n§Limmortalwyy，超人，三一，Yuri1917，zzyy，罗莎§!"
-  LFB_CountryClosing_credits_2: "§W特别鸣谢：§!\n§Y是非真假一座桥§!§U，本模组的奠基人§!\n§G光自水群的群友们§!\n§K每一位支持我们走到现在的玩家朋友§!"
+  LFB_CountryClosing_credits_1: "§W前成员：§!\n§Limmortalwyy，Yuri1917，zzyy，超人，罗莎，三一§!"
+  LFB_CountryClosing_credits_2: "§W特别鸣谢：§!\nGelenium，Layefe，ZMZ\n§Y是非真假一座桥§!§U，本模组的奠基人§!\n§G光自水群的群友们§!\n§K每一位支持我们走到现在的玩家朋友§!"
