热修复 -修复了GAW和平后部分倒计时仍会反复触发的问题 -修复了部分旗帜显示错误的问题 -为早期工业gui增加了工具提示

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -358,3 +358,6 @@
   LFB_CountryClosing_credits_0: "§W现成员：§!\nduc，Fairrairtha，LeaderOne_Official，LemonLover，MKMASASYK，阿巴巴阿巴，博尔赫斯的沙之书，明天的太阳，访古砖，龚兴仁，海军上将哈尔西，梁王绚辻词，梁希隐，某科学的宇宙河豚，某转生的史莱姆，氢氦锂铍硼，史上最会打灰的人，温赫扎，哮喘桃，心酱，斫青客"
   LFB_CountryClosing_credits_1: "§W前成员：§!\n§Limmortalwyy，Yuri1917，zzyy，超人，罗莎，三一§!"
   LFB_CountryClosing_credits_2: "§W特别鸣谢：§!\nGelenium，Layefe，ZMZ\n§Y是非真假一座桥§!§U，本模组的奠基人§!\n§G光自水群的群友们§!\n§K每一位支持我们走到现在的玩家朋友§!"
+  COX_eid_gui_plus_Button_tt: "[Get_COX_eid_gui_plus_Button_tt]"
+  COX_eid_gui_plus_Button_1_tt: "一次性增加4个机床"
+  COX_eid_gui_plus_Button_2_tt: ""
