发布后更新 -调整了满洲筑垒相关的时间限制 -修真了部分本地化 -改进了第二次抗日战争后的核心分配

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -359,5 +359,5 @@
   LFB_CountryClosing_credits_1: "§W前成员：§!\n§Limmortalwyy，Yuri1917，zzyy，超人，罗莎，三一§!"
   LFB_CountryClosing_credits_2: "§W特别鸣谢：§!\nGelenium，Layefe，ZMZ\n§Y是非真假一座桥§!§U，本模组的奠基人§!\n§G光自水群的群友们§!\n§K每一位支持我们走到现在的玩家朋友§!"
   COX_eid_gui_plus_Button_tt: "[Get_COX_eid_gui_plus_Button_tt]"
-  COX_eid_gui_plus_Button_1_tt: "一次性增加4个机床"
+  COX_eid_gui_plus_Button_1_tt: "至少需要4个机床"
   COX_eid_gui_plus_Button_2_tt: ""
