--- a/localisation/simp_chinese/LFB_national_focuses_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_national_focuses_l_simp_chinese.yml
@@ -105,7 +105,7 @@
 	COX_People_Political_Consultative_Conference_of_Xinjiang: "新疆人民政治协商会议"
 	COX_People_Political_Consultative_Conference_of_Xinjiang_desc: "随着政治上的努力开花结果，正式邀请全疆各界爱国民主人士前来迪化共商国是的时机已经到来。党领导下的新疆人民政协将通过政协的共同纲领、选举产生正式的苏维埃政府，并承担立法与监督的职责。行政体制的完善也将在人民政协的协助与监督下推进。新疆人民政协的成立标志着解放区政权的真正巩固，也意味着我们在至暗的中华大地的边疆高举起了解放的火炬。"
 	COX_Production_And_Construction_Corps: "筹备建设兵团"
-	COX_Production_And_Construction_Corps_desc:0""目前我们的专门负责建设的工人同志队伍数量还不够庞大，连修整道路也显得困难。幸而在我们的部队中则有不少优秀的工兵同志，我们的战士们也拥有良好的纪律性，因此，向基层部队分配建设任务用以帮助根据地建设不但是可行的，同时也是很有必要的。"
+	COX_Production_And_Construction_Corps_desc:0"目前我们的专门负责建设的工人同志队伍数量还不够庞大，连修整道路也显得困难。幸而在我们的部队中则有不少优秀的工兵同志，我们的战士们也拥有良好的纪律性，因此，向基层部队分配建设任务用以帮助根据地建设不但是可行的，同时也是很有必要的。"
 	COX_Aid_From_Old_Red_Army: "老红军的援助"
 	COX_Aid_From_Old_Red_Army_desc: "在两次世界大战过后的今天，大战中形成的战术思维已经显得十分落伍了。然而，我们的指战员们大多都没有听说过何为“现代战争”，更谈不上如何去进行一场现代战争，这会使得我们在未来面对日本军队及其仆从时落入相当不利的境地。为了尽可能地消除这一隐患，我们将尝试向西蒙的流亡红军申请一批教官——倘若他们还有余力能够派出任何人的话。"
 	COX_Commend_The_Sharpshooter: "总结经验"
