添加朝鲜政党名称本地化

--- a/localisation/simp_chinese/COX_GAW_GUI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_GAW_GUI_l_simp_chinese.yml
@@ -13,9 +13,11 @@ DMN_fascism_party: "满洲国各地残余机构"
 DMN_fascism_party_long: "满洲国各地残余机构"
 DMN_paternalism_party: "满洲重建委员会"
 DMN_paternalism_party_long: "满洲重建委员会"
-DMN_communist_party: "中国共产党 - 东北局"
-DMN_communist_party_long: "中国共产党 - 东北局"
+DMN_communist_party: "中共东北局"
+DMN_communist_party_long: "中共中央东北局"
 DMN_pujie: "爱新觉罗·溥杰"
+KOR_rebuild_communist_party: "朝鲜共产党"
+KOR_rebuild_communist_party_long: "朝鲜共产党"
 COX_idea_huabei_17: "作鸟兽散"
 COX_idea_huabei_18: "往日之影"
 
