--- a/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
@@ -49,6 +49,7 @@
  COX_union_despotism_party: "联合政府"
  COX_union_despotism_party_long: "联合政府"
  COX_union_conservatism_party: "国民党"
+ COX_union_conservatism_party_long: "中国国民党"
  COX_union_liberal_conservatism_party: "国家社会党"
  COX_union_liberal_conservatism_party_long: "中国国家社会党"
  COX_union_liberalism_party: "民盟"
@@ -56,7 +57,9 @@
  COX_union_progressivism_party: "民盟 - 农工民主党"
  COX_union_progressivism_party_long: "中国民主同盟 - 中国农工民主党"
  COX_union_socialist_party: "国民党 - 革命委员会"
+ COX_union_socialist_party_long: "中国国民党革命委员会"
  COX_union_communist_party: "中国共产党"
+ COX_union_communist_party_long: "中国共产党"
  COX_National_Assembly: "国民大会"
  COX_National_Assembly_desc: "“可怖疮伤的绷带”\n--------------\n时至二十世纪末，没有人会否认——此时的中国已是个濒死的巨人，千年前的繁华早已不在；百年间的战火几乎放干了她的鲜血。当这个民族终于挣脱了束缚在身上的锁链，步履蹒跚地站立于世界民族之林时，浑身上下早已千疮百孔。外有强敌虎视眈眈，国内矛盾更日益尖锐——自由的中国顽强伫立，但汩汩鲜血正从伤口涌出，此刻，她需要的不是精细地缝合，而是粗暴的包扎。先克服失血的风险，再论其他！\n\n国民大会，便是这样一段被寄予厚望的薄纱。它残破，粗粝，因它建立在各党派的妥协，而不是某种愿景之上。尽管包扎之后，许多伤口仍渗着血；尽管许多人对它的存在颇有微词，但它仍将中国的各个部分绑在了一起，不至于四分五裂，以至于再次给邻家的豺狗可乘之机。"
  COX_Liu_Shaoqi: "刘少奇 "
