--- a/localisation/simp_chinese/LFB_ideas_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_ideas_l_simp_chinese.yml
@@ -90,7 +90,7 @@ COX_civ_war_bourgeoisie: "背弃之盟"
 COX_civ_war_bourgeoisie_desc: "在第二次抗日战争期间，中国的“民族资产阶级”曾因不满日本帝国主义的残酷剥削而加入了统一战线，与无产阶级及贫农结成联盟，他们的专业知识为统一战线的胜利奠定了物质基础。但在战后两党对峙的形势之中，他们却选择与日占期间的旧买办资产阶级同流合污，共同推举国民党反动派充当代理人，妄图镇压革命，恢复“秩序”，推行所谓的“宪政民主”。\n无产阶级与贫农的神圣联盟绝不允许这样的背叛，随着资产阶级代理人在军事上的全面崩溃，工农联盟在土地革命的战线上也取得了伟大的胜利。对阶级暴力的恐惧促使大量资产阶级逃亡海外，他们卷走了大量贵金属与精密器械，尽其所能地破坏生产资料。即便是完好的设施，人才匮乏的共和国也难以对其进行利用。\n好在仍有部分有良知之人选择留了下来，他们终将成为火种，成为快速扩张的新中国教育系统的支柱……"
 
 COX_civ_war_land_reform: "土地革命"
-COX_civ_war_land_reform: "人民政府一贯坚持进行强制土地改革的政策，在战争时期，红军解放一个地区后，随之而来的便是经验丰富的土改队，他们批斗地主，焚烧地契，召开“诉苦会”，废除高利贷……这些雷厉风行的手段为人民政府争取到了中国数量最广大的贫农阶级的鼎力支持。\n随着对国民党反动派战争的彻底胜利，人民政府很快通过了在全国范围内进行彻底土地改革的决议，§Y持续了数千年的封建土地制度，将在华夏大地上被彻底废除！§!"
+COX_civ_war_land_reform_desc: "人民政府一贯坚持进行强制土地改革的政策，在战争时期，红军解放一个地区后，随之而来的便是经验丰富的土改队，他们批斗地主，焚烧地契，召开“诉苦会”，废除高利贷……这些雷厉风行的手段为人民政府争取到了中国数量最广大的贫农阶级的鼎力支持。\n随着对国民党反动派战争的彻底胜利，人民政府很快通过了在全国范围内进行彻底土地改革的决议，§Y持续了数千年的封建土地制度，将在华夏大地上被彻底废除！§!"
 #魔怔内容及其介绍
   Touhou: "幻想世界入"
   INSANE: "你红军爷爷回来啦"
