修正标点符号错误

--- a/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
@@ -44,7 +44,7 @@
  COX_opposite: "各执一词的联合"
  COX_opposite_desc: "两党和谈的基础，是基于尊重与承认孙中山先生的革命成果之上的。不过，两党各自对三民主义的见地与阐述，显然是相去甚远的……"
  COX_division: "割裂的经济状况"
- COX_division_desc; "国共双方的控制区，在合并前就施行着截然相反的经济制度。合并后，统一经济制度政令虽已经下达，但收效甚微：北部已经完成土地改革的区域拒绝无谓的转型，而南部或是只进行了浮于表面的土地分配，或是完成了“白色土改”。\n§e出现这种现象的政权主体，往往很难被冠以‘国家’的名号……§!"
+ COX_division_desc: "国共双方的控制区，在合并前就施行着截然相反的经济制度。合并后，统一经济制度政令虽已经下达，但收效甚微：北部已经完成土地改革的区域拒绝无谓的转型，而南部或是只进行了浮于表面的土地分配，或是完成了“白色土改”。\n§e出现这种现象的政权主体，往往很难被冠以‘国家’的名号……§!"
  COX_National_Assembly: "国民大会"
  COX_union_despotism_party: "联合政府"
  COX_union_despotism_party_long: "联合政府"
