本地化修复 -修复了部分战争结语显示异常的问题

--- a/localisation/simp_chinese/LFB_peace_popup_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_peace_popup_l_simp_chinese.yml
@@ -6,6 +6,7 @@
  TNO_PEACE_POPUP_WAR_LFB_GAW_CHI: "昔日作威作福的[CHI.GetFlag]§j汉奸§!已被中国人民踩在脚下，中华民族的§x解放§!§z事业§!更进一步。"
  TNO_PEACE_POPUP_WAR_LFB_GAW_GNG: "§e帝国主义§!用中国人民的血肉塑造的[GNG.GetFlag]§r畸形怪物§!已被中国人民的铁拳砸得粉碎，中华民族的§x解放§!§z事业§!更进一步。"
  TNO_PEACE_POPUP_WAR_LFB_GAW_MAN: "自命高贵的[MAN.GetFlag]§O傀儡§!从人民尸骨所砌成的王座上跌落，中华民族的§x解放§!§z事业§!更进一步。"
+ TNO_PEACE_POPUP_WAR_LFB_GAW_NCC: "侵略者的[NCC.GetFlag]§j棋子§!被从棋盘上拔去，中华民族的§x解放§!§z事业§!更进一步。"
  TNO_PEACE_POPUP_WAR_LFB_GAW_JAP: "[JAP.GetFlag]§e旭日§!东落，§x中华§!§z民族§!的§e百年国耻§!终得洗雪。"
  TNO_PEACE_POPUP_WAR_LFB_GAW_HNA: "又一颗孤悬海外的[HNA.GetFlag]§e明珠§!重回了§x中§!§z国§!的怀抱，中华民族的§x解放§!§z事业§!更进一步。"
  TNO_PEACE_POPUP_WAR_LFB_GAW_COX: "[JAP.GetFlag]§e旭日§!的光辉再一次让[COX.GetFlag]§x红星§!黯然失色，§x中华§!§z民族§!寻求自由的梦想终究还是破灭了。"
@@ -18,7 +19,8 @@
  TNO_PEACE_POPUP_FLAVOR_LFB_GAW_COX: "然而前程并非轻易如愿，因吾辈身负世间诸难。"
  TNO_PEACE_POPUP_FLAVOR_LFB_GAW_CHI: "教尔作人不作人，教尔不苟竟狗苟。而今俯首尔就擒，仍自教尔分人狗。"
  TNO_PEACE_POPUP_FLAVOR_LFB_GAW_JAP: "翻山倒海寻常事，今日愚公天下多。"
- TNO_PEACE_POPUP_FLAVOR_LFB_GAW_HNA:  "母亲呀，你千万不该抛弃了我！"
+ TNO_PEACE_POPUP_FLAVOR_LFB_GAW_HNA: "母亲呀，你千万不该抛弃了我！"
+ TNO_PEACE_POPUP_FLAVOR_LFB_GAW_NCC: "中日满三国，非诚笃亲善，共同协力，不能确立东亚和平。"
  TNO_PEACE_POPUP_FLAVOR_LFB_2CCW_COX: "为革命而奋斗，为革命而牺牲，死固无恨。"
  TNO_PEACE_POPUP_FLAVOR_LFB_2CCW_YUN: "被压迫的中国全体民众，乃一切中国问题的主宰。"
  #以下内容来自群友“老大哥在看着你”，感谢他的贡献
