微调政党名称

--- a/localisation/simp_chinese/replace/TNO_Kyrgyzstan_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/TNO_Kyrgyzstan_l_simp_chinese.yml
@@ -11,8 +11,8 @@
  KYR_conservatism_party_long: "吉尔吉斯正义与发展党“信仰之光”"
  KYR_progressivism_party: "受争议的费尔干纳地带反激进主义与人民团结协会"
  KYR_progressivism_party_long: "受争议的费尔干纳地带反激进主义与人民团结协会"
- KYR_socialist_party: "吉尔吉斯祖国党"
- KYR_socialist_party_long: "吉尔吉斯祖国党"
+ KYR_socialist_party: "吉尔吉斯斯坦祖国党"
+ KYR_socialist_party_long: "吉尔吉斯斯坦祖国党"
  KYR_communist_party: "吉尔吉斯共产党"
  KYR_communist_party_long: "吉尔吉斯共产党"
  POLITICS_TURDAKUN_USUBALIEV_DESC: "图尔达昆·乌苏巴利耶维奇·乌苏巴利耶夫出生于1919年一户吉尔吉斯农民家庭，在青年时期就接受了共产主义。他畅想过美好的未来，但当他在1941年从吉尔吉斯国立大学毕业后，德国人摧毁了苏维埃联盟，只给中亚人民留下一地鸡毛。\n\n显然，共产主义出了什么错；同样，共产主义也没那么糟。靠着它，他这个穷苦农民之子才有接受教育、就业以及提高社会地位的机会。共产主义最主要的问题，很明显在于拒绝宗教凝聚人心的力量。这种错误，图尔达昆绝不会犯第二次。再一次团结吉尔吉斯人民需要的不是过去的承诺，而是利用早已团结人民几个世纪的力量。这力量还可以使吉尔吉斯获取来自外界的支持。\n\n伴着这一理想，塔拉斯伊斯兰国诞生了。这个国度依然遵守着正统的社会主义，只是全政府上下都带着强烈的宗教色彩。这样将不同思想融为一体的做法，源自领导者图尔达昆的创造——这当然是为了全体吉尔吉斯人民的利益。"
@@ -27,8 +27,8 @@
  KYR_Kalima_Amankulova: "卡利玛·阿曼库洛娃"
  KYR_Abdukadyr_Urazbekov: "阿卜杜卡迪尔·乌拉兹别科夫"
  KYR_Andrei_Grebnev: "安德烈·格列布涅夫"
- KYR: "吉尔吉斯民主社会主义共和国"
- KYR_DEF: "吉尔吉斯民主社会主义共和国"
+ KYR: "吉尔吉斯斯坦社会主义共和国"
+ KYR_DEF: "吉尔吉斯斯坦社会主义共和国"
  KYR_ADJ: "吉尔吉斯"
  KYR_Talas: "塔拉斯伊斯兰国"
  KYR_Talas_DEF: "塔拉斯伊斯兰国"
