微调政党名称

--- a/localisation/simp_chinese/replace/TNO_Tajikistan_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/TNO_Tajikistan_l_simp_chinese.yml
@@ -1,6 +1,6 @@
 ﻿l_simp_chinese:
- TAJ_communist_party: "塔吉克共产党（布）"
- TAJ_communist_party_long: "塔吉克共产党（布）"
+ TAJ_communist_party: "塔吉克共产党"
+ TAJ_communist_party_long: "塔吉克共产党"
  TAJ_conservatism_party: "塔吉克农业党"
  TAJ_conservatism_party_long: "塔吉克农业党"
  TAJ_liberal_conservatism_party: "经济改革党"
