微调政党名称

--- a/localisation/simp_chinese/replace/TNO_Xikang_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/TNO_Xikang_l_simp_chinese.yml
@@ -5,12 +5,14 @@
  XIK:0 "西康省"
  XIK_DEF:0 "西康省"
  XIK_ADJ:0 "西康省"
- XIK_despotism_1_party:0 "西康省政府"
- XIK_despotism_1_party_long:0 "西康省政府"
+ XIK_despotism_1_party:0 "各路土司"
+ XIK_despotism_1_party_long:0 "各路土司"
+ XIK_despotism_2_party:0 "西康省政府"
+ XIK_despotism_2_party_long:0 "西康省政府"
  XIK_despotism_party:0 "第九战区战时司令部"
  XIK_despotism_party_long:0 "第九战区战时司令部"
- XIK_liberal_conservatism_party:0 "异议分子"
- XIK_liberal_conservatism_party_long:0 "异议分子"
+ XIK_communist_party: "中共川康特委"
+ XIK_communist_party_long: "中国共产党川康特别委员会"
  XIK_Xue_Yue:0 "薛岳"
  POLITICS_XUE_YUE_DESC:0 "§Y职务： 中华民国第九战区代司令长官§!\n\n§Y军衔：陆军一级上将§!\n\n北宋末年，女真南侵，家国沦丧…但汉家男儿仍有忠骨，荆湘男儿汇聚于岳字旗下，北击贼寇，一时间名扬九州…时光轮转，千年岁月已逝，但清末的光景却好似宋时——中央王朝的权威被异族践踏，而其富裕却遭垂涎。嗅着鲜血的腥味，列强们扑咬上来，而日本，便是这些豺狗中最嗜血，最凶暴的一匹。\n\n在《马关条约》签订的耻辱之刻，一位父亲给儿子取名“仰岳”，盼望他将来能成为扶危济弱的大英雄。多年以后，父亲终于得偿所愿——中华民族又到了存亡之秋，而他的儿子成为了将军，站在长沙城头，率领荆湘儿郎们抵御日寇侵袭。三次长沙战役，薛岳凭借利用地形阻击迟滞，穿插包围的“天炉战术”，屡次挫败了日军进犯长沙的企图。\n\n但无论战士如何效死，将军如何善战，胜利却越来越远。一切的缘由，正是当权者的昏聩，一如阻挠岳家军北伐的宋廷——敌人远未到来之时，便自乱阵脚，一把火差点将整座城烧成了灰——此等怯战，此等草菅人命，恐怕便翻古今史书，也鲜能寻到第二例。终于在第四次长沙战役时，集中优势兵力的日本攻进了城，自此南北连为一线，日军可以凭借铁路与水运的便利，快速将物资与兵力从东北转运至新加坡。\n\n城破之时，残存的国军溃不成军，来不及收拢残部，薛岳只得向西溃逃，他的部队因瘟疫损失惨重，他的身子也被流弹所伤，破片嵌入骨髓，使他再也无法抬起自己的右臂…而当他终于突破敌人重重围剿，回到重庆时，局势已彻底糜烂。沿着长江，日军的兵锋直抵重庆。党国一把手，那个自命不凡，优柔寡断的蒋介石，轻轻拉着薛岳的手，将重庆周边防务托付于他。\n\n重庆之战，薛岳拖着颤抖的手，编织着摇摇欲坠的防线，指挥着疲弱之师奏出了二战最后一曲血腥交响。但这一切终是徒劳…1962年，这位残破的将军率领着残破之军困守一隅，他竟羡慕起岳飞的命运——虽死得荒唐，但毕竟不用亲眼得见山河破碎，国家沦亡……"
 XIK_XIKANGWANG:0 "西康王"
