将边区改为了革命根据地

--- a/localisation/simp_chinese/COX_defeated_cg_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_defeated_cg_l_simp_chinese.yml
@@ -1,6 +1,6 @@
 ﻿l_simp_chinese:
- COX_failed: "新疆边区"
- COX_failed_ADJ: "新疆边区"
+ COX_failed: "新疆革命根据地"
+ COX_failed_ADJ: "新疆革命根据地"
  COX_failed_DEF: "新疆"
  QIN_partisan: "国民革命军第四十集团军"
  QIN_partisan_ADJ: "国民革命军第四十集团军"
