微调政党名称

--- a/localisation/simp_chinese/COX_defeated_cg_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_defeated_cg_l_simp_chinese.yml
@@ -10,8 +10,8 @@
  GAN_win_DEF: "西北"
  CHI_dog_despotism_party: "国民党 - 新CC系"
  CHI_dog_despotism_party_long: "中国国民党 - 新中央俱乐部"
- CHI_dog_fascism_party: "国民党 - 公馆系"
- CHI_dog_fascism_party_long: "中国国民党 - 公馆系"
+ CHI_dog_fascism_party: "国民党 - 华北政务委员会"
+ CHI_dog_fascism_party_long: "中国国民党 - 华北政务委员会"
  YUN_JAP_ultranationalism_party: "护国军残部"
  YUN_JAP_ultranationalism_party_long: "中华民国护国军残部"
  YUN_JAP_despotism_party: "国军残部"
