--- a/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
@@ -3,20 +3,20 @@ COX: "中国旅旅部"
 COX: "中国旅旅部"
 COX_ADJ: "中国旅"
 COX_DEF: "近卫步兵第八十八旅旅部"
-COX_sik: "新疆苏维埃边区"
-COX_sik_ADJ: "新疆苏维埃边区"
-COX_sik_DEF: "新疆苏维埃边区"
+COX_sik: "新疆革命根据地"
+COX_sik_ADJ: "新疆革命根据地"
+COX_sik_DEF: "新疆"
 COX_xib: "西北抗日民主政府"
 COX_xib_ADJ: "西北抗日民主政府"
 COX_xib_DEF: "西北抗日民主政府"
 COX_communist_party: "中国共产党 - 八十八旅支部"
 COX_communist_party_long: "中国共产党 - 八十八旅支部"
-COX_communist_3_party: "中国共产党 - 新疆局"
-COX_communist_3_party_long: "中国共产党 - 新疆局（CPC - XinJiang Bureau）"
+COX_communist_3_party: "中国共产党新疆局"
+COX_communist_3_party_long: "中国共产党新疆局（CPC XinJiang Bureau）"
 COX_socialist_party: "新疆保卫和平民主同盟"
 COX_socialist_party_long: "新疆保卫和平民主同盟（Peace and Democracy League of XinJiang）"
-COX_despotism_party: "中国共产党 - 紧急委员会"
-COX_despotism_party_long: "中国共产党 - 紧急委员会"
+COX_despotism_party: "中国共产党紧急委员会"
+COX_despotism_party_long: "中国共产党紧急委员会"
 COX_despotism_democracy_party: "抗日军政委员会"
 COX_despotism_democracy_party_long: "抗日军政委员会（Anti-Japanese Military and Political Committee）"
 COX_PRC: "中华人民共和国"
@@ -26,9 +26,9 @@ COX_PRC_DEF:"中华人民共和国"
 COX_SOV: "中华苏维埃共和国"
 COX_SOV_ADJ: "中华苏维埃共和国"
 COX_SOV_DEF: "中华苏维埃共和国"
-COX_XBJ: "西北抗日边区"
-COX_XBJ_ADJ: "西北抗日边区"
-COX_XBJ_DEF: "西北抗日边区"
+COX_XBJ: "西北抗日民主政府"
+COX_XBJ_ADJ: "西北抗日民主政府"
+COX_XBJ_DEF: "西北抗日民主政府"
 KOR_LFB_IF: "朝鲜"
 KOR_LFB_IF_ADJ: "朝鲜"
 KOR_LFB_IF_DEF: "朝鲜"
@@ -46,8 +46,6 @@ XIK_KIX_DEF:"西康省"
 XIN: "新疆执政府"
 XIN_ADJ:"新疆执政府"
 XIN_DEF:"新疆执政府"
-XIN_communist_party: "中国共产党 - 新疆局"
-XIN_communist_party_long: "中国共产党 - 新疆局"
 XIN_socialist_party: "新疆保卫和平民主同盟"
 XIN_socialist_party_long: "新疆保卫和平民主同盟"
 XIN_despotism_party: "六大政策党"
@@ -58,10 +56,10 @@ XIN_fascism_party_long: "日本顾问团（Japanese Merchant Group）"
 XBJ: "中共西北局"
 XBJ_ADJ: "中共西北局"
 XBJ_DEF: "中共西北局"
-XBJ_communist_party: "中国共产党 - 西北局"
-XBJ_communist_party_long: "中国共产党 - 西北局"
-XBJ_socialist_party: "中国共产党 - 西北局"
-XBJ_socialist_party_long: "中国共产党 - 西北局"
+XBJ_communist_party: "中国共产党西北局"
+XBJ_communist_party_long: "中国共产党西北局"
+XBJ_socialist_party: "中国共产党西北局"
+XBJ_socialist_party_long: "中国共产党西北局"
 XBJ_despotism_party: "宁系马家"
 XBJ_NRA: "国民革命军西北新一师"
 XBJ_NRA_long: "国民革命军西北新编第一师"
@@ -88,8 +86,8 @@ XPC_ultranationalism_party: "维吾尔兄弟会"
 XPC_ultranationalism_party_long: "维吾尔兄弟会"
 XPC_paternalism_party: "伊犁建设兵团"
 XPC_paternalism_party_long: "伊犁建设兵团"
-XPC_communist_party: "中国共产党 - 新疆局"
-XPC_communist_party_long: "中国共产党 - 新疆局"
+XPC_communist_party: "中国共产党新疆局"
+XPC_communist_party_long: "中国共产党新疆局"
 Construction_Corps:0 "建设兵团"
 pup_difangju:0 "地方局"
 
