本地化修正 -更改了部分工具提示

--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -188,11 +188,11 @@
   COX_Liberate_Shaanxi:0"争夺陕西"
   COX_Shannxi_ruanaway:0"时间正在流逝……"
   COX_Shannxi_ruanaway_trigger_tt:0"我们已经完全占领了陕西"
-  COX_Shannxi_ruanaway_effect_tt:0"倘若我们未能在当地站稳脚跟，就不能维持黄河以南地区的控制……"
+  COX_Shannxi_ruanaway_effect_tt:0"倘若我们未能在当地站稳脚跟，就不能维持黄河以南地区的控制……\n\n§R陕西的陷落势必会引起日军的注意，我们将会正式卷入与日本的冲突！§!n\n§Y在时间流失殆尽前，请确保我们已经做好了万全准备。§!"
   COX_occupying_Shaanxi_effect_tt:0"陕西的局势发生变化！"
   COX_occupy_Xian:0"进军西安"
   COX_occupy_Xian_trigger_tt:0"红军对陕西的占领程度达到§G100§!"
-  COX_occupy_Xian_effect_tt:0"我们将得以彻底确保对陕西的控制权！\n\n一旦这样做，势必会引起日军的§R注意§!，我们将不得不§R发动进攻§!！"
+  COX_occupy_Xian_effect_tt:0"我们将得以彻底确保对陕西的控制权！\n\n§R陕西的陷落势必会引起日军的注意，我们将会正式卷入与日本的冲突！§!\n\n§Y在选择此决议前，请确保我们已经做好了万全准备。§!"
   COX_dispatching_vanguard:0"派遣前锋部队"
   COX_dispatching_vanguard_tt:0"红军力量增加§G15§!"
   COX_equipment_delivery:0"分发装备"
