--- a/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
@@ -11,8 +11,8 @@ COX_xib_ADJ: "西北抗日民主政府"
 COX_xib_DEF: "西北抗日民主政府"
 COX_communist_party: "中国共产党 - 八十八旅支部"
 COX_communist_party_long: "中国共产党 - 八十八旅支部"
-COX_communist_3_party: "中国共产党新疆局"
-COX_communist_3_party_long: "中国共产党新疆局（CPC XinJiang Bureau）"
+COX_communist_3_party: "中共中央新疆局"
+COX_communist_3_party_long: "中共中央新疆局（CPC XinJiang Bureau）"
 COX_socialist_party: "新疆保卫和平民主同盟"
 COX_socialist_party_long: "新疆保卫和平民主同盟（Peace and Democracy League of XinJiang）"
 COX_despotism_party: "中国共产党紧急委员会"
@@ -56,10 +56,10 @@ XIN_fascism_party_long: "日本顾问团（Japanese Merchant Group）"
 XBJ: "中共西北局"
 XBJ_ADJ: "中共西北局"
 XBJ_DEF: "中共西北局"
-XBJ_communist_party: "中国共产党西北局"
-XBJ_communist_party_long: "中国共产党西北局"
-XBJ_socialist_party: "中国共产党西北局"
-XBJ_socialist_party_long: "中国共产党西北局"
+XBJ_communist_party: "中共中央西北局"
+XBJ_communist_party_long: "中共中央西北局"
+XBJ_socialist_party: "中共中央西北局"
+XBJ_socialist_party_long: "中共中央西北局"
 XBJ_despotism_party: "宁系马家"
 XBJ_NRA: "国民革命军西北新一师"
 XBJ_NRA_long: "国民革命军西北新编第一师"
