--- a/localisation/simp_chinese/LFB_national_focuses_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_national_focuses_l_simp_chinese.yml
@@ -100,8 +100,8 @@
 	COX_Temporary_Industry_Committee_desc: "农业生产可以分散成为若干小的公社或者生产组织来进行，但是进行大规模的工业生产却不行。在接收和重建新疆工业设备与工业组织的时候，我们也应该建立起专门针对工业生产而准备的委员会组织，统筹协调像工业设备管理与引进、工人的教育和相应的绝大多数事物。在未来我们需要对这个组织改组，但现在这样一个临时的组织是有其存在必要的。"
 	COX_Renew_The_Old_Facilities: "翻新旧有设备"
 	COX_Renew_The_Old_Facilities_desc: "我们在修复盛世才时期的工业设备时，发现这些设备的老旧程度超过了我们想象，许多设备几乎已经锈死，大部分不得不报废处理，但是还是有一些设备可以翻新。对于设备的翻新改造的意义不用多说，但是我们大概不能只靠着这些老旧设备过日子。"
-	COX_Dihua_Reorganize: "迪化改编"
-	COX_Dihua_Reorganize_desc: "旧军阀部队的打散重编工作接近完成，冥顽不化的兵痞被干脆利落地扫地出门，新指挥员也陆续到位，我们终于可以自豪地声称，残存的反动要素被我们彻底清算，这些曾经的散兵游勇已经被改造为了有组织有纪律的新军队。虽然对他们思想的改造还要持续一段时间，但这只是时间问题。今天上午，毛岸英同志代表蒙古-新疆苏维埃在迪化授予了他们新的番号，勉励他们努力训练，为保卫革命根据地而英勇斗争。此后，这些部队将与中国旅并肩作战，我们的根据地又多了一层牢靠的保障。"
+	COX_Dihua_Reorganize: "乌鲁木齐改编"
+	COX_Dihua_Reorganize_desc: "旧军阀部队的打散重编工作接近完成，冥顽不化的兵痞被干脆利落地扫地出门，新指挥员也陆续到位，我们终于可以自豪地声称，残存的反动要素被我们彻底清算，这些曾经的散兵游勇已经被改造为了有组织有纪律的新军队。虽然对他们思想的改造还要持续一段时间，但这只是时间问题。今天上午，毛岸英同志代表新疆根据地在乌鲁木齐授予了他们新的番号，勉励他们努力训练，为保卫革命根据地而英勇斗争。此后，这些部队将与中国旅并肩作战，我们的根据地又多了一层牢靠的保障。"
 	COX_People_Political_Consultative_Conference_of_Xinjiang: "新疆人民政治协商会议"
 	COX_People_Political_Consultative_Conference_of_Xinjiang_desc: "随着政治上的努力开花结果，正式邀请全疆各界爱国民主人士前来迪化共商国是的时机已经到来。党领导下的新疆人民政协将通过政协的共同纲领、选举产生正式的苏维埃政府，并承担立法与监督的职责。行政体制的完善也将在人民政协的协助与监督下推进。新疆人民政协的成立标志着解放区政权的真正巩固，也意味着我们在至暗的中华大地的边疆高举起了解放的火炬。"
 	COX_Production_And_Construction_Corps: "筹备建设兵团"
