--- a/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
@@ -42,9 +42,9 @@
  YUN_civil_war_ADJ: "中华民国南京国民政府"
  YUN_civil_war_DEF: "国统区"
  COX_opposite: "各执一词的联合"
- COX_opposite_desc: "两党和谈的基础，是基于尊重与承认孙中山先生的革命成果之上的。不过，两党各自对三民主义的见地与阐述，显然是相去甚远的……"
+ COX_opposite_desc: "两党和谈的基础，是基于尊重与承认孙中山先生的革命成果之上的。\n\n不过，两党各自对三民主义的见地与阐述，§Y显然是相去甚远的……§"
  COX_division: "割裂的经济状况"
- COX_division_desc: "国共双方的控制区，在合并前就施行着截然相反的经济制度。合并后，统一经济制度政令虽已经下达，但收效甚微：北部已经完成土地改革的区域拒绝无谓的转型，而南部或是只进行了浮于表面的土地分配，或是完成了“白色土改”。\n§e出现这种现象的政权主体，往往很难被冠以‘国家’的名号……§!"
+ COX_division_desc: "国共双方的控制区，在合并前就施行着截然相反的经济制度。合并后，统一经济制度政令虽已经下达，但收效甚微：北部已经完成土地改革的区域拒绝无谓的转型，而南部或是只进行了浮于表面的土地分配，或是完成了“白色土改”。\n\n出现这种现象的政权主体，§Y往往很难被冠以“国家”的名号……§!"
  COX_National_Assembly: "国民大会"
  COX_union_despotism_party: "联合政府"
  COX_union_despotism_party_long: "联合政府"
@@ -61,7 +61,7 @@
  COX_union_communist_party: "中国共产党"
  COX_union_communist_party_long: "中国共产党"
  COX_National_Assembly: "国民大会"
- COX_National_Assembly_desc: "“可怖疮伤的绷带”\n--------------\n时至二十世纪末，没有人会否认——此时的中国已是个濒死的巨人，千年前的繁华早已不在；百年间的战火几乎放干了她的鲜血。当这个民族终于挣脱了束缚在身上的锁链，步履蹒跚地站立于世界民族之林时，浑身上下早已千疮百孔。外有强敌虎视眈眈，国内矛盾更日益尖锐——自由的中国顽强伫立，但汩汩鲜血正从伤口涌出，此刻，她需要的不是精细地缝合，而是粗暴的包扎。先克服失血的风险，再论其他！\n\n国民大会，便是这样一段被寄予厚望的薄纱。它残破，粗粝，因它建立在各党派的妥协，而不是某种愿景之上。尽管包扎之后，许多伤口仍渗着血；尽管许多人对它的存在颇有微词，但它仍将中国的各个部分绑在了一起，不至于四分五裂，以至于再次给邻家的豺狗可乘之机。"
+ COX_National_Assembly_desc: "§Y“可怖疮伤的绷带”§!\n--------------\n时至二十世纪末，没有人会否认——此时的中国已是个濒死的巨人，千年前的繁华早已不在；百年间的战火几乎放干了她的鲜血。当这个民族终于挣脱了束缚在身上的锁链，步履蹒跚地站立于世界民族之林时，浑身上下早已千疮百孔。外有强敌虎视眈眈，国内矛盾更日益尖锐——自由的中国顽强伫立，但汩汩鲜血正从伤口涌出，此刻，她需要的不是精细地缝合，而是粗暴的包扎。先克服失血的风险，再论其他！\n\n国民大会，便是这样一段被寄予厚望的薄纱。它残破、粗粝，因它建立在各党派的妥协，而不是某种愿景之上。尽管包扎之后，许多伤口仍渗着血；尽管许多人对它的存在颇有微词，但它仍将中国的各个部分绑在了一起，不至于四分五裂，以至于再次给邻家的豺狗可乘之机。"
  COX_Liu_Shaoqi: "刘少奇 "
  COX_Zhang_Bojun: "章伯钧"
  COX_Fei_Xiaotong: "费孝通"
@@ -69,11 +69,13 @@
  COX_Chen_Yi: "陈毅"
  COX_Zhou_Enlai: "周恩来"
  COX_Song_Ziwen: "宋子文"
+ #键值中带空格的不需要删除，它是用于区别已有键值的，有空格游戏才能正常识别。
  COX_Sun_Fo: "孙科 "
  COX_jiang_jingguo: "蒋经国 "
  Mao_Anying_2: "毛岸英 "
  COX_ye_jianying: "叶剑英 "
  COX_Provisional_Peoples_Goverment: "临时人民政府"
+ COX_Provisional_Peoples_Goverment_desc: "§Y“红星照耀中国”§!\n--------------\n内战的爆发令两党都猝不及防，但不同于内部派系林立、且有悠久内斗传统的国民党，在谈判无望之时，西南党中央已经提前转移到了乌鲁木齐。一次党代会已经召开，一次选举已经举行，一份决议已经做出。虽然党的力量离散多年，彼此间很难说没有什么嫌隙，但这个奉行民主集中制的政党还是最大限度地开动了自己的政治机器，将疲惫不堪的西北红军与护国军编制内的武装整编在一起，及时地维系了解放区的稳定的同时，又竭尽全力地拉拢诸民主党派，试图令它的对手在舆论上陷入孤立。\n\n这一切措施的结果，便是屹立于中国北方的“临时人民政府”。由“全国政治协商大会”赋权，“临时执行委员会”执掌着最高权柄。不可否认，它的存在代表着中国共产党放弃了一切和平协商的企图，全力准备用武力将自己的愿景推广至全国。\n\n待到内战的硝烟消逝之时，或许这个临时机构将成为未来社会主义中国的根基……"
  COX_Ye_Jianying_sec_desc:0 "§Y安全部长\n£COX_XBJ_text §x中国共产党§!籍\n“久经考验”§!\n--------------\n从土地革命战争到第一次抗日战争，再到长达二十年的西南革命战争，最后是第二次抗日战争……叶剑英便是为数不多存活至今，并且还在坚持战斗的革命者。如若没有他的指挥才干，在数次决定性失败后，西南中央的生存空间或许将更加逼仄；如若不是他指挥取得了“谅山大捷”，日军或许早已通过越南边境长驱直入……一身功勋傍身，令他在中国解放后，被推举为新中国的首任安全部长。\n\n在军事建设方面，基于在西南的经验，党总结出了一套根植于群众的，富有韧性与生命力的军事策略——“持久人民战争”——以群众运动为核心，巩固敌后游击作战，撬动敌我平衡后，通过坚决的正面作战一举将敌人击溃。虽然不是所有的中国军队都如此强调意识形态的作用，但这位共产党部长无疑会想方设法地将政治工作普及到每一名士兵心中，唯有如此，新生的共和国才能真正地立于不败之地。"
  COX_Zhang_Chong_sec_desc:0 "§Y安全部长\n£NPA_text §e护国军§!籍\n“坚定的护国军将领”§!\n--------------\n张冲胆大、敏捷、机智，自幼身边人就对他赞不绝口。张冲于1901年生于云南的一个村镇，在辛亥革命后的混乱局势中，他不得不落草为寇。后来他逐步消灭周边悍匪，队伍发展到了六百余人，广受民众爱戴。他曾率部定期袭击滇越铁路，令法国人怒不可遏，这样的举动吸引了省长唐继尧的关注，他多次派兵围剿并俘虏了张冲。张冲接受了招安，在军中谋得一个职位。在军阀混战中，唐继尧在1927年被政变推翻，张冲也由于在其中联合龙云反对胡若愚而在年仅26岁时就被任命为第5师师长。\n\n抗战期间，滇军编成第60军，张冲在其中任第184师师长。他曾参与过著名的台儿庄战役，因此在国军中声名鹊起，最终在武汉战役中被委任为第三路军军长。当中国沦陷、日本高举南京政权的旗帜向各地进军时，张冲仍在继续抵抗；哪怕云南省已经沦陷、他也被迫和宋希濂麾下的军团撤至缅甸时，张冲也仍在继续抵抗。\n\n而今，解放的战旗高高扬起，人民再次向他发出了召唤。他们希望他回来，与中华儿女并肩作战，反抗压迫者。他将回应这一召唤，满足人民的愿望，或者在征途中壮烈牺牲。\n\n§u而今海内虽定，然四方未平。无论中国将迈向怎样的未来，护国军会始终枪口朝外，时刻警惕！§!"
  COX_Sun_Liren_sec_desc:0 "§Y国防部长\n£guomindang §z中国国民党§!籍\n“虎贲”§!\n--------------\n想象一个你身边的精英人物，他聪明，狡诈，能完成上级给他的一切任务，但是却处理不好社交关系。孙立人就是这样的人。在国民革命军中，孙立人从来没有得到过赏识，蒋介石永远更偏爱黄埔系的将领，然而孙立人却毕业于美国弗吉尼亚军校。当时从军校毕业的孙立人没有立即回到中国，反而是游历西欧以了解最新的军事思想。换句话说，孙立人的地位真正来源于他自己的实力，而不是同时期中国军队中十分普遍的裙带关系。回国后，孙立人担任宋子文麾下税务警察的团长，并且将其打造为警察中最精锐的队伍。在抗战前期，税务警察以独立旅的身份参战，战功卓著。然而好景不长，戴笠盯上了这支部队，经过一番运作，孙立人不得不交出独立旅的一班人马，作为补贴，孙立人将以这半个旅组建新编三十八师，升任少将。1941年，日军进攻东南亚，孙立人主动请缨要去参加中国远征军。受到蒋介石的接见。次年在缅甸大破日军，闻名中外。在当时至暗的世界局势中，孙立人的大捷给人们带来了一丝希望。然而缅甸战场的胜利无法拯救中国正面战场的节节败退。那天，重庆沦陷，两位巨人身死的消息传到了孙立人的耳中，他没有多说什么，而是带领着所剩无几的部下撤向云南和缅甸的边境，回到了最开始出发的地方。在这个不毛之地又以国民革命军的名义又奋战了二十多年。龙云起兵的那天，孙立人才离开丛林回到阔别已久的昆明。但是他来不及看看云南的变化，就要再次上前线去。而现在，虽然中国境内已无战争，但是更大的责任仍然等待着他。这位飘零半生的国防部长将会把他的后半生致力于剔除军队中的裙带关系，解决山头林立的现状，将之建立为一支完全听命于政府的现代化军队，就像他当年在美国所见的一样。"
@@ -139,7 +141,7 @@
  LFBUG.12.t: "胜券在握？"
  LFBUG.12.desc: "“蒋副总统，真的就这样让共党加入联合政府吗？那群共党无孔不入，不过几年，我们就会被渗透得和筛子一样的！”\n\n “你怕什么，我把你提到军事统计局局长的职位就是为了让你好好监视军队的。我问问你，哪个党一开始不是清廉的？后来党员多了，自然也就难管了。只要以后共产党和我们接触多了，他们也会习惯这种灯红酒绿的日子。到时候他们和我们还有什么区别？”\n\n 尽管副总统说出这样的话，局长还是难掩他的恐惧，作为党内的后辈。他已经听了不少遗老的埋怨。他们不止一次地在局内的会议上大谈共党的威胁。\n\n “你放心，我当初在德国学习的时候就研究过这个问题。结论是共产党只擅长山村游击战。一旦到了议会里面，他们就不行了。德国共产党以前起义的时候，如烈火燎原，但是后来纳粹党掌权之后，他们便被希特勒打压至销声匿迹。就前几年，印度的共产党就因为政见不合而分裂为至少三个独立的政党，尽管他们之间还有联系，但是已经不足以影响国大党的统治地位。所以，国民大会将会是我们最熟悉的战场。因为，在这个世界上————”"
  LFBUG.12.a: "“还从来没有过一个共产党，能通过议会成为一个大国的执政党呢。”"
- LFBUG_tt_12: "现在，南京条约已经签署，中国人民终于获得了暂时的和平，可中国的未来却无人可以给出答案。"
+ LFBUG_tt_12: "现在，南京条约已经签署，中国人民终于获得了§Y暂时的和平§!，可中国的未来§Y却无人可以给出答案§!。"
  LFBUG.101.t: "不识好歹"
  LFBUG.101.desc: "“怎么回事？今天的报纸看了没？”\n\n “不是说联合政府已经办起来了吗，还能出什么岔子？”\n\n“说的就是这个！你看！”\n\n“新一届内阁已选出，人选如下……搞什么，这部长怎么都是赤党的人？”\n\n“赤党真是疯了！念在抗日有功的份上，咱们已经给足了他们面子了！怎么现在还蹬鼻子上脸了？”\n\n“我说这个内阁人选再怎么共同提名，最终还得是根据委员会拍板啊？赤党是怎么摆平他们的？难不成给他们塞了钱？”\n\n“威逼，利诱，他们赤党什么做不出来？二十年代就想这么搞，现在还要再搞一次？”\n\n“难不成到最后还要跟以前一样，再打一仗？”\n\n“打仗？我们好好请赤党来谈判，而他们就搁这玩这出！我看早就该打了！”\n\n“大家先息怒，我觉得不如再谈谈……”\n\n“别他妈谈了，咱们给了他多少好脸色，结果搞成这个样子。你跟他谈，他在你面前耍太极，背后指不定什么时候就要捅你一刀子！”\n\n“道渊，你再等等，多半是委员会里出了什么意外，我们这边可以再次安排一次会谈……”\n\n“谈个屁！还在这谈，有你这功夫，人家枪口都顶你脑门子上了！我看咱也别闲着，干脆战场上见真章吧！”"
  LFBUG.101.a: "“赶紧给前线打电话！”"
@@ -157,7 +159,7 @@
  LFBUG.202.a: "随后到来的，是枪声。"
  LFBUG_202_a_tt: "随着理念之争再无法弥合，§R中国再陷血海§!!"
  LFBUG.301.t: "新的开始"
- LFBUG.301.desc: "“中国共产党中央委员会，中央临时人民政府行政委员会，中国共产党中央军事委员会向全党、全军、全解放区人民宣告，在党的英明领导下，在红军全体指战员的英勇作战下，在全解放区人民的团结合作下，红军已经彻底打败以国民党反动派为首的反动力量，将和平重新带回中华大地。保卫了第二次抗日战争的成果，捍卫了龙云将军的奋斗结晶……”随着国民党军最后一支有生力量的覆灭，这样的广播传遍了中华大地，传进了街头巷尾。\n\n“啊呀，我们的红军又打赢了哇？！好的呀！好的呀！不愧是毛主席的兵啊！”这是乌鲁木齐的茶馆内，一位老者的兴奋。\n\n“娃他妈，我说过我们党不会输的！哪像你，一听见要打仗了还要怕那还乡团又要回来似的！”陕北的窑洞里，王顺西对着他的妻子高兴地嚷道。” \n\n “诶我说，这共产党的红军，是要比那国民党的兵厉害得多了勒！那天我起床开窗，楼底下呼啦啦的全是睡着的红军！真怪，都不知道他们咋进来的！”上海的小楼前，一位太太听了广播之后对她的姐妹们嚷道。“鼠目寸光！他刚进来肯定秋毫不犯，等到坐稳了天下，还指不定怎么乱来勒！”这是她的姐妹的嘀咕。\n\n “唉……不知道到时候共产党要怎么对我们勒，是不是要‘共产’我们？”温州一家商会里，商人们担忧地发出了叹息。\n\n “说什么不过成王败寇，到头来还不是轮流坐天下！”南京小院内，一个老者愤怒地关掉了收音机。\n\n还有许许多多的声音，有欣喜的，有质疑的，也有不关心的……此时都随着广播的播出在中国大地喧闹着。但不论对此如何看待，经年累月的战争与苦难似乎终于有了个头，而人们肩上的重担也似乎开始轻了起来。\n\n而毛岸英正收拾着自己的行李，最后一次环顾他在新疆待了十年的办公室。中央正在分批次迁往北平，摆在他面前的是一个经历了剥削和战争，百废待兴的新中国。党已经开辟了自己的天下，但真正的挑战才刚刚开始——。\n\n “岸英啊，准备好了没呀？”周恩来出现在门口。\n\n “准备好了”他抬起头。"
+ LFBUG.301.desc: "“中国共产党中央委员会，中央临时人民政府行政委员会，中国共产党中央军事委员会向全党、全军、全解放区人民宣告，在党的英明领导下，在红军全体指战员的英勇作战下，在全解放区人民的团结合作下，红军已经彻底打败以国民党反动派为首的反动力量，将和平重新带回中华大地。保卫了第二次抗日战争的成果，捍卫了龙云将军的奋斗结晶……”随着国民党军最后一支有生力量的覆灭，这样的广播传遍了中华大地，传进了街头巷尾。\n\n“啊呀，我们的红军又打赢了哇？！好的呀！好的呀！不愧是毛主席的兵啊！”这是乌鲁木齐的茶馆内，一位老者的兴奋。\n\n“娃他妈，我说过我们党不会输的！哪像你，一听见要打仗了还要怕那还乡团又要回来似的！”陕北的窑洞里，王顺西对着他的妻子高兴地嚷道。” \n\n “诶我说，这共产党的红军，是要比那国民党的兵厉害得多了勒！那天我起床开窗，楼底下呼啦啦的全是睡着的红军！真怪，都不知道他们咋进来的！”上海的小楼前，一位太太听了广播之后对她的姐妹们嚷道。“鼠目寸光！他刚进来肯定秋毫不犯，等到坐稳了天下，还指不定怎么乱来勒！”这是她的姐妹的嘀咕。\n\n “唉……不知道到时候共产党要怎么对我们勒，是不是要‘共产’我们？”温州一家商会里，商人们担忧地发出了叹息。\n\n “说什么不过成王败寇，到头来还不是轮流坐天下！”南京小院内，一个老者愤怒地关掉了收音机。\n\n还有许许多多的声音，有欣喜的，有质疑的，也有不关心的……此时都随着广播的播出在中国大地喧闹着。但不论对此如何看待，经年累月的战争与苦难似乎终于有了个头，而人们肩上的重担也似乎开始轻了起来。\n\n而毛岸英正收拾着自己的行李，最后一次环顾他在新疆待了十年的办公室。中央正在分批次迁往北平，摆在他面前的是一个经历了剥削和战争，百废待兴的新中国。党已经开辟了自己的天下，但真正的挑战才刚刚开始——。\n\n “岸英啊，准备好了没呀？”周恩来出现在门口。\n\n “准备好了。”\n他抬起头。"
  LFBUG.301.a: "“走吧，去北平。”"
  COX_PRC_tt: "我们取得了胜利，而现在，摆在我们面前的是§R伤痕累累的祖国§!。"
  LFBUG.302.t: "结束动员戡乱状态"
