--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -258,7 +258,7 @@
   
 
   #IF线战后内容
-  COX_Nanjing_Negotiations_tt:0"§z南京§!§x谈判§!将会决定中国的命运！"
+  COX_Nanjing_Negotiations_tt:0"z南京§!§x谈判§!将会决定中国的§Y命运！§!"
   COX_TIB_problem:0"藏区问题"
   COX_TIB_problem_desc:0"西藏虽获解放，但仍然问题重重：在下层，万恶的农奴制仍在荼毒人民；在上层，不服西藏当局的权贵人士们正蠢蠢欲动；向南边看去，自由印度政府态度尚不明确，而印度共和国对西藏产生了浓厚的兴趣。我们必须做出行动，在未来可能的骚乱甚至危机出现前，建立起对藏区的有效管辖。或者，更进一步——对藏区进行民主改革，§Y砸碎那祸害千年的、吃人不吐骨头的农奴制！§!"
   LFB_GAW_GUI.9.t:0"和平解放西藏！"
@@ -291,7 +291,7 @@
   TNO_CountryClosing_left_title_vanilla: "自此，\n新秩序迎来了一缕暮色…"
 
   TNO_CountryClosing_left_title_XBJ_early_ending:"黄巾弥勒何时至\n掀起惊涛改旧红"
-  TNO_CountryClosing_epilogue_XBJ_early_ending:"旷野之上，刘少奇正沉思着。而在他面前的，赫然是部队打扫完战场之后，堆起来的红军士兵尸体。\n向远方眺望，兰州城楼上，鲜红的旭日旗依旧飘扬。与预期的一鼓作气解放兰州不同，主攻兰州的部队被铺天盖地的炮火与炸弹淹没，再无法前进一步。红军与日军之间的差距，远不是抗日救国的决心能弥补的。面前的兰州犹如天堑，不知如何是好。\n而在西南，龙云发起了声势浩大的护国运动，誓要将中国从旭日的镣铐下解放，东亚维持了20年的表面和平终被打破。可西南的战局仍不明朗…仅凭云贵两省，真的可以敌的过装备精良训练有素的伪民国军队吗？\n\n不过，对于坐镇乌鲁木齐的毛岸英来说，属于他的万里长征才刚刚开始……"
+  TNO_CountryClosing_epilogue_XBJ_early_ending:"旷野之上，刘少奇正沉思着。而在他面前的，赫然是部队打扫完战场之后，堆起来的红军士兵尸体。\n\n向远方眺望，兰州城楼上，鲜红的旭日旗依旧飘扬。与预期的一鼓作气解放兰州不同，主攻兰州的部队被铺天盖地的炮火与炸弹淹没，再无法前进一步。红军与日军之间的差距，远不是抗日救国的决心能弥补的。面前的兰州犹如天堑，不知如何是好。\n\n而在西南，龙云发起了声势浩大的护国运动，誓要将中国从旭日的镣铐下解放，东亚维持了20年的表面和平终被打破。可西南的战局仍不明朗…仅凭云贵两省，真的可以敌的过装备精良训练有素的伪民国军队吗？\n\n不过，对于坐镇乌鲁木齐的毛岸英来说，属于他的万里长征才刚刚开始……"
   
   TNO_CountryClosing_left_title_COX_IF_defeated_ending:"出师未捷身先死\n长使人民泪满襟"
   TNO_CountryClosing_epilogue_COX_IF_defeated_ending:"终究，一切以失败落幕。贝加尔湖畔灯塔的微光撕破了层层迷雾，但航船终是搁浅一旁。一切又回到了原点，似乎什么东西都没有改变，这片苦难之地上弥漫着哀伤与绝望。\n\n但是，当春风裹着北还的飞鸟，春雷倏地炸响，焦黑的华北平原上，也总是要开出新芽。自然仍依着它的规律，噤着声，不断向前发展，奔波不息。中国共产党几十年的努力，中华民族几十年间承受之苦难，其壮烈的爆发，终究没能冲开历史的迷雾，人民战争的思想似乎已经被扫进历史垃圾堆。\n\n但是，在边疆，农村与城市，在一切不起眼的角落，星火仍存…只要人民还在承受苦难，只要日寇还在耀武扬威，反抗的火焰就不会熄灭。若不信的话，你看吧！看那黄土高原之上，看那横断山脉之中，看那高筑起的街垒，看那终将自由的人民！\n\n70年代的曙光已经浮现，中国人民仍被束缚于日本帝国主义的压迫之中，他们虽在历史中行了弯路，但终将摆脱一切苦难与耻辱，开辟解放的未来！"
@@ -327,8 +327,8 @@
   WAR_NAME_COX_XIN: "中共解放新疆"
   WAR_NAME_GAN_QIN: "绥靖西北"
   WAR_NAME_XBJ_QIN: "中共解放西北"
-  WAR_NAME_JAP_COX: "第二次抗日战争-华北战线"
-  WAR_NAME_COX_JAP: "第二次抗日战争-华北战线"
+  WAR_NAME_JAP_COX: "第二次抗日战争 - 北方战线"
+  WAR_NAME_COX_JAP: "第二次抗日战争 - 北方战线"
   WAR_NAME_COX_TIB: "中共解放西藏"
   WAR_NAME_MEN_MEA: "蒙古革命"
   WAR_NAME_MEA_MEN: "蒙古革命"
