--- a/localisation/simp_chinese/replace/LFB_replace_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/LFB_replace_l_simp_chinese.yml
@@ -8,8 +8,8 @@
  tno_current_version_date:  "2024/10/17（发布版本） TNO-Light from Lake Baikal v0.25 阋墙御侮"
 
  ##战争名称（替换）
- WAR_NAME_JAP_YUN: "第二次抗日战争-华南战线"
- WAR_NAME_YUN_JAP: "第二次抗日战争-华南战线"
+ WAR_NAME_JAP_YUN: "第二次抗日战争 - 南方战线"
+ WAR_NAME_YUN_JAP: "第二次抗日战争 - 南方战线"
 
  ##结束界面tt
  TNO_CountryClosing_select_btn_credits_tt: "[Get_TNO_CountryClosing_select_btn_credits_tt]"
