--- a/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
@@ -12,16 +12,20 @@ COX_xib_DEF: "西北抗日民主政府"
 COX_communist_party: "中国共产党 - 八十八旅支部"
 COX_communist_party_long: "中国共产党 - 八十八旅支部"
 COX_communist_3_party: "中共中央新疆局"
-COX_communist_3_party_long: "中共中央新疆局（CPC XinJiang Bureau）"
+COX_communist_3_party_long: "中国共产党中央委员会新疆局（CPCC XinJiang Bureau）"
 COX_socialist_party: "新疆保卫和平民主同盟"
 COX_socialist_party_long: "新疆保卫和平民主同盟（Peace and Democracy League of XinJiang）"
 COX_despotism_party: "中国共产党紧急委员会"
 COX_despotism_party_long: "中国共产党紧急委员会"
 COX_despotism_democracy_party: "抗日军政委员会"
 COX_despotism_democracy_party_long: "抗日军政委员会（Anti-Japanese Military and Political Committee）"
+COX_communist_party_XIN: "中共中央新疆局"
+COX_communist_party_XIN_long: "中国共产党中央委员会新疆局"
+COX_communist_party_PRC: "中国共产党"
+COX_communist_party_PRC_long: "中国共产党"
 COX_PRC: "中华人民共和国"
-COX_PRC_ADJ:"中华人民共和国"
-COX_PRC_DEF:"中华人民共和国"
+COX_PRC_ADJ: "中华人民共和国"
+COX_PRC_DEF: "中华人民共和国"
 
 COX_SOV: "中华苏维埃共和国"
 COX_SOV_ADJ: "中华苏维埃共和国"
@@ -53,14 +57,18 @@ XIN_despotism_party_long: "六大政策党(SPP)"
 XIN_fascism_party: "日本顾问团"
 XIN_fascism_party_long: "日本顾问团（Japanese Merchant Group）"
 
-XBJ: "中共西北局"
-XBJ_ADJ: "中共西北局"
+XBJ: "中共中央西北局"
+XBJ_ADJ: "中国共产党中央委员会西北局"
 XBJ_DEF: "中共西北局"
+XBJ_QGNPG: "青甘宁革命根据地"
+XBJ_QGNPG_ADJ: "青甘宁革命根据地"
+XBJ_QGNPG_DEF: "青甘宁"
 XBJ_communist_party: "中共中央西北局"
-XBJ_communist_party_long: "中共中央西北局"
+XBJ_communist_party_long: "中国共产党中央委员会西北局"
 XBJ_socialist_party: "中共中央西北局"
-XBJ_socialist_party_long: "中共中央西北局"
-XBJ_despotism_party: "宁系马家"
+XBJ_socialist_party_long: "中国共产党中央委员会西北局"
+XBJ_despotism_party: "宁马"
+XBJ_despotism_party_long: "宁夏马家军"
 XBJ_NRA: "国民革命军西北新一师"
 XBJ_NRA_long: "国民革命军西北新编第一师"
 
@@ -73,9 +81,9 @@ HNA_despotism_party: "帝国海南军政部"
 HNA_liberalism_party: "中国民主同盟"
 HNA_communist_party: "琼崖讨逆纵队"
 
-XNJ: "西南中共中央"
-XNJ_DEF: "西南中共中央"
-XNJ_ADJ: "西南中共中央"
+XNJ: "中央革命根据地"
+XNJ_DEF: "中央革命根据地"
+XNJ_ADJ: "中共中央"
 XNJ_communist_party: "中国共产党"
 XNJ_socialist_party: "工农运动"
 
@@ -86,8 +94,8 @@ XPC_ultranationalism_party: "维吾尔兄弟会"
 XPC_ultranationalism_party_long: "维吾尔兄弟会"
 XPC_paternalism_party: "伊犁建设兵团"
 XPC_paternalism_party_long: "伊犁建设兵团"
-XPC_communist_party: "中国共产党新疆局"
-XPC_communist_party_long: "中国共产党新疆局"
+XPC_communist_party: "中共中央新疆局"
+XPC_communist_party_long: "中国共产党中央委员会新疆局"
 Construction_Corps:0 "建设兵团"
 pup_difangju:0 "地方局"
 
