微调国家名称

--- a/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
@@ -62,7 +62,7 @@ XBJ_ADJ: "中国共产党中央委员会西北局"
 XBJ_DEF: "中共西北局"
 XBJ_QGNPG: "青甘宁革命根据地"
 XBJ_QGNPG_ADJ: "青甘宁革命根据地"
-XBJ_QGNPG_DEF: "青甘宁"
+XBJ_QGNPG_DEF: "青海人民政府"
 XBJ_communist_party: "中共中央西北局"
 XBJ_communist_party_long: "中国共产党中央委员会西北局"
 XBJ_socialist_party: "中共中央西北局"
