修正了简称和全称写反的问题

--- a/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
@@ -1,46 +1,46 @@
 ﻿l_simp_chinese:
  COX_ROC: "中华民国"
- COX_ROC_ADJ: "中华民国"
- COX_ROC_DEF: "中国"
+ COX_ROC_DEF: "中华民国"
+ COX_ROC_ADJ: "中国"
  COX_DRC: "中华民主共和国"
- COX_DRC_ADJ: "中华民主共和国"
- COX_DRC_DEF: "中国"
+ COX_DRC_DEF: "中华民主共和国"
+ COX_DRC_ADJ: "中国"
  COX_CR: "中华共和国"
- COX_CR_ADJ: "中华共和国"
- COX_CR_DEF: "中国"
+ COX_CR_DEF: "中华共和国"
+ COX_CR_ADJ: "中国"
  COX_ROC_BSWS: "中华民国"
- COX_ROC_BSWS_ADJ: "中华民国"
- COX_ROC_BSWS_DEF: "中国"
+ COX_ROC_BSWS_DEF: "中华民国"
+ COX_ROC_BSWS_ADJ: "中国"
  COX_ROC_UN: "中华民国"
- COX_ROC_UN_ADJ: "中华民国"
- COX_ROC_UN_DEF: "中国"
+ COX_ROC_UN_DEF: "中华民国"
+ COX_ROC_UN_ADJ: "中国"
  COX_ROC_TR: "中华民国"
- COX_ROC_TR_ADJ: "中华民国"
- COX_ROC_TR_DEF: "中国"
+ COX_ROC_TR_DEF: "中华民国"
+ COX_ROC_TR_ADJ: "中国"
  COX_DRC_BSWS: "中华民主共和国"
- COX_DRC_BSWS_ADJ: "中华民主共和国"
- COX_DRC_BSWS_DEF: "中国"
+ COX_DRC_BSWS_DEF: "中华民主共和国"
+ COX_DRC_BSWS_ADJ: "中国"
  COX_DRC_UN: "中华民主共和国"
- COX_DRC_UN_ADJ: "中华民主共和国"
- COX_DRC_UN_DEF: "中国"
+ COX_DRC_UN_DEF: "中华民主共和国"
+ COX_DRC_UN_ADJ: "中国"
  COX_DRC_TR: "中华民主共和国"
- COX_DRC_TR_ADJ: "中华民主共和国"
- COX_DRC_TR_DEF: "中国"
+ COX_DRC_TR_DEF: "中华民主共和国"
+ COX_DRC_TR_ADJ: "中国"
  COX_CR_BSWS: "中华共和国"
- COX_CR_BSWS_ADJ: "中华共和国"
- COX_CR_BSWS_DEF: "中国"
+ COX_CR_BSWS_DEF: "中华共和国"
+ COX_CR_BSWS_ADJ: "中国"
  COX_CR_UN: "中华共和国"
- COX_CR_UN_ADJ: "中华共和国"
- COX_CR_UN_DEF: "中国"
+ COX_CR_UN_DEF: "中华共和国"
+ COX_CR_UN_ADJ: "中国"
  COX_CR_TR: "中华共和国"
- COX_CR_TR_ADJ: "中华共和国"
- COX_CR_TR_DEF: "中国"
+ COX_CR_TR_DEF: "中华共和国"
+ COX_CR_TR_ADJ: "中国"
  COX_civil_war: "西北人民政府"
- COX_civil_war_ADJ: "西北人民政府"
- COX_civil_war_DEF: "解放区"
+ COX_civil_war_DEF: "西北人民政府"
+ COX_civil_war_ADJ: "解放区"
  YUN_civil_war: "南京国民政府"
- YUN_civil_war_ADJ: "中华民国南京国民政府"
- YUN_civil_war_DEF: "国统区"
+ YUN_civil_war_DEF: "中华民国南京国民政府"
+ YUN_civil_war_ADJ: "国统区"
  COX_opposite: "各执一词的联合"
  COX_opposite_desc: "两党和谈的基础，是基于尊重与承认孙中山先生的革命成果之上的。\n\n不过，两党各自对三民主义的见地与阐述，§Y显然是相去甚远的……§"
  COX_division: "割裂的经济状况"
