--- a/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_new_unsorted_l_simp_chinese.yml
@@ -258,7 +258,7 @@
   
 
   #IF线战后内容
-  COX_Nanjing_Negotiations_tt:0"z南京§!§x谈判§!将会决定中国的§Y命运！§!"
+  COX_Nanjing_Negotiations_tt:0"z§南京§!§x谈判§!将会决定中国的§Y命运！§!"
   COX_TIB_problem:0"藏区问题"
   COX_TIB_problem_desc:0"西藏虽获解放，但仍然问题重重：在下层，万恶的农奴制仍在荼毒人民；在上层，不服西藏当局的权贵人士们正蠢蠢欲动；向南边看去，自由印度政府态度尚不明确，而印度共和国对西藏产生了浓厚的兴趣。我们必须做出行动，在未来可能的骚乱甚至危机出现前，建立起对藏区的有效管辖。或者，更进一步——对藏区进行民主改革，§Y砸碎那祸害千年的、吃人不吐骨头的农奴制！§!"
   LFB_GAW_GUI.9.t:0"和平解放西藏！"
