--- a/localisation/simp_chinese/replace/TNO_Ma_Clique_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/TNO_Ma_Clique_l_simp_chinese.yml
@@ -1,13 +1,22 @@
 ﻿l_simp_chinese:
+#character
+ QIN_Ma_Ji_yuan: "马继援 "
+ QIN_Chen_Cheng: "陈诚"
  POLITICS_CHEN_CHENG_DESC:0 ""
- QIN_despotism_party:0 "马家军"
- QIN_despotism_party_long:0 "马家军"
- QIN_despotism_3_party:0 "国民党 - 土木系"
- QIN_despotism_3_party_long:0 "中国国民党 - 土木系"
- QIN_despotism_4_party:0 "国民党 - 中央俱乐部"
+ QIN_Chen_Lifu: "陈立夫"
+ QIN_Zhu_Jiahua: "朱家骅"
+#party
+ QIN_despotism_1_party:0 "宁夏马家军"
+ QIN_despotism_1_party_long:0 "宁夏马家军"
+ QIN_despotism_party:0 "青海马家军"
+ QIN_despotism_party_long:0 "青海马家军"
+ QIN_despotism_3_party:0 "国民革命军 - 中央军"
+ QIN_despotism_3_party_long:0 "国民革命军 - 中央军"
+ QIN_despotism_4_party:0 "国民党 - CC系"
  QIN_despotism_4_party_long:0 "中国国民党 - 中央俱乐部"
  QIN_paternalism_party:0 "国民党 - 政学系"
  QIN_paternalism_party_long:0 "中国国民党 - 政学系"
- QIN_Chen_Cheng: "陈诚"
- QIN_Chen_Lifu: "陈立夫"
- QIN_Zhu_Jiahua: "朱家骅"
+#country name
+ QIN_MJY: "西宁国民政府"
+ QIN_MJY_DEF:"西宁国民政府"
+ QIN_MJY_ADJ:"西北"
